--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -37,6 +37,7 @@ about.description=Muestra informaci\u00f3n acerca de PowerFolder
 ##about.dialog.general_information=General Information
 ##about.dialog.homepage=Homepage
 ##about.dialog.professional_folder_sharing_tool=Professional folder sharing tool
+##about.dialog.send_bug_report=Send Bug Report
 ##about.dialog.support=Support
 ##about.dialog.team=Team
 ##about.dialog.testers=Testers
@@ -63,8 +64,10 @@ addmodifierfriend.description=A\u00f1ade el modificador del archivo a la lista d
 addmodifierfriend.key=f
 addmodifierfriend.name=A\u00f1adir Modificador de Archivo a Amigos
 
+##addressEditor.parseerror=<html>Please enter the IPs to be considered on LAN, valid inputs are\:<br>xxx.xxx.xxx.xxx or<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
+##addressEditor.title=IP-Range
+
 chatpanel.cannot_deliver=el mensaje no se pudo entregar porque '{0}' no est\u00e1 conectado
-chatpanel.chat_about=Charlar sobre
 chatpanel.chat_with=Charlar con
 chatpanel.member_connected_at_time={0} conectado a las {1}
 chatpanel.member_disconnected_at_time={0} desconectado a las {1}
@@ -106,11 +109,14 @@ dialog.addmembertofriendlist.explain=(Si a\u00f1ade alguien a su lista de amigos
 ##dialog.addmembertofriendlist.question={0} joined one or more folders\:\n\n{1}\ndo you want to add him to your friendlist now?
 dialog.addmembertofriendlist.title=A\u00f1adir {0} a la lista de amigos
 dialog.alreadyrunning.exitbutton=Salir
+##dialog.alreadyrunning.startbutton=Start anyways
 dialog.alreadyrunning.title=Ya funcionando
 dialog.alreadyrunning.warning=PowerFolder ya esta en funcionamiento\n\nConsejo\: Si reinici\u00f3 PowerFolder, \nelimine todos los procesos javaw/java e intentelo de nuevo
+##dialog.binderror=Unable to bind port\!
 dialog.connect.connecting=Conectando
 dialog.connect.connecting_to=Conectando a {0}...
 dialog.connection_problem=Problema de conexi\u00f3n
+##dialog.fatalerror.title=Fatal Error
 dialog.synchronization.choose=Por favor, elija su acci\u00f3n en
 ##dialog.synchronization.receive_changes=Receive changes
 dialog.synchronization.send_and_receive_changes=Enviar y recibir cambios
@@ -130,10 +136,6 @@ dialog.updatecheck.gotoHomepage=Ir a la p\u00e1gina web de PowerFolder
 dialog.updatecheck.nothingNeverAsk=No hacer nada y no preguntar de nuevo
 dialog.updatecheck.text=Est\u00e1 disponible una nueva versi\u00f3n de PowerFolder            \n\nEsta versi\u00f3n\: v{0}\nUltima disponible\: v{1} (la m\u00e1s nueva)\n
 dialog.updatecheck.title=Nueva versi\u00f3n disponible
-
-##folderpanel.filestab.dropfile_duplicate_dialog.skipall=Skip All Duplicates
-##folderpanel.filestab.dropfile_duplicate_dialog.text=This folder already contains a file '{0}' would you like to overwrite the existing file?
-##folderpanel.filestab.dropfile_duplicate_dialog.title=File exists
 
 disablesilentmode.description=Modo silencioso activo, no se detectar\u00e1 archivos nuevos o modificados. Pulse para cambiar a modo completo
 disablesilentmode.key=w
@@ -195,6 +197,28 @@ filelist.recursive=recursivo
 ##filelist.status.no_files_available_add_files_and_invite=No files available... add files in your local folder and ask others to join this folder by Invitation
 ##filelist.status.no_files_available_add_files_in_folder=No files available... Add files in you local folder to share them
 ##filelist.status.no_files_available_yet_fetching_filelist=No files available yet... fetching filelist
+
+##filenameproblem.dialog.add_to_ignore=Add to ignore
+##filenameproblem.dialog.add_to_ignore.explained=Add this file to the list of files that are excluded from sharing
+##filenameproblem.dialog.automatic_rename=Automatic rename
+##filenameproblem.dialog.automatic_rename.explained=removes invalid charaters and or adds "-1", or similair fixes to create a valid (unique) filename
+##filenameproblem.dialog.description=Filename problem(s) detected, select for each file a solution
+##filenameproblem.dialog.do_nothing=Do nothing
+##filenameproblem.dialog.never_ask_this_again=Never ask this again
+##filenameproblem.dialog.solution=Solution
+##filenameproblem.dialog.title=Filename problem(s) detected
+##filenameproblem.duplicate=Duplicate filename found (with different case)
+##filenameproblem.duplicate.description=A filename with the same name is found but it has a different case\:\n{0}\nthis causes problems on windows computers
+##filenameproblem.ends_with_illegal_char=The filename ends with characters that are not recommended
+##filenameproblem.ends_with_illegal_char.description=The filename ends with characters that may cause problems on Windows computers.\nThe characters . and space ( ) are not allowed as last characters on those computers
+##filenameproblem.not_recommended_chars=The filename contains characters that are not recommended
+##filenameproblem.not_recommended_chars_linux.description=The filename contains characters that may cause problems on Unix/Linux computers.\nThe character / is not allowed on those computers
+##filenameproblem.not_recommended_chars_mac_osx.description=The filename contains characters that may cause problems on Mac OSX computers.\nThe characters / and \: are not allowed on those computers
+##filenameproblem.not_recommended_chars_windows.description=The filename contains characters that may cause problems on Windows computers.\nThe characters |\\?*<"\:>/  and "controll" characters (ASCII code 0 till 31)\nare not allowed on those computers
+##filenameproblem.reserved_filename=The filename is a reserved filename on Windows
+##filenameproblem.reserved_filename.description=The filename is a reserved filename on Windows,\nit is recommended not to use this names on windows\:\n CON, PRN, AUX, CLOCK$, NUL COM0, COM1, COM2, COM3,\nCOM4, COM5, COM6, COM7, COM8, COM9, LPT0, LPT1,\nLPT2, LPT3, LPT4, LPT5, LPT6, LPT7, LPT8, and LPT9
+##filenameproblem.to_long=The filename is to long
+##filenameproblem.to_long.description=The filename is longer than 255 characters,\nthis in know to cause problems on Windows, Mac OSX and Unix/Linux computers
 
 ##findfriends.description=Start searching for new friends
 ##findfriends.key=F
@@ -259,7 +283,10 @@ folderleave.dialog.title=\u00bfAbandonar la carpeta {0} ?
 folderleave.key=A
 folderleave.name=Abandonar carpeta
 
-##folderpanel.settingstab.choose_sync_profile=Choose synchronisation profile
+##folderpanel.chattab.title=Chat
+##folderpanel.filestab.dropfile_duplicate_dialog.skipall=Skip All Duplicates
+##folderpanel.filestab.dropfile_duplicate_dialog.text=This folder already contains a file '{0}' would you like to overwrite the existing file?
+##folderpanel.filestab.dropfile_duplicate_dialog.title=File exists
 ##folderpanel.hometab.folder_type=Folder type
 ##folderpanel.hometab.local_folder_location=Local folder location
 ##folderpanel.hometab.local_size=Local size
@@ -279,6 +306,7 @@ folderleave.name=Abandonar carpeta
 ##folderpanel.settingstab.addbutton.description=Add a pattern to exclude files from synchronization
 ##folderpanel.settingstab.addbutton.key=A
 ##folderpanel.settingstab.addbutton.name=Add
+##folderpanel.settingstab.choose_sync_profile=Choose synchronisation profile
 ##folderpanel.settingstab.edit_a_pattern.text=Edit a Pattern to exclude files from synchronization
 ##folderpanel.settingstab.edit_a_pattern.title=Edit ignore pattern
 ##folderpanel.settingstab.editbutton.description=Edit a pattern
@@ -290,7 +318,7 @@ folderleave.name=Abandonar carpeta
 ##folderpanel.settingstab.removebutton.name=Remove
 ##folderpanel.settingstab.title=Settings
 
-##folderrepository.warnonclose.neveraskagain=Never ask this again. 
+##folderrepository.warnonclose.neveraskagain=Never ask this again 
 ##folderrepository.warnonclose.text=These folders are not synchronized yet\:\n\n\n\n{0}\n\n\nContinue Exit?
 ##folderrepository.warnonclose.title=Continue Exit?
 
@@ -310,10 +338,9 @@ friendspanel.search_results=Resultados de la b\u00fasqueda
 ##general.availability=Availability
 general.cancel=Cancelar
 general.cancel.key=C     
-general.datawarning.0=Tenga en cuenta
-general.datawarning.1=Que todos los archivos en la carpeta se compartiran.
-general.datawarning.2=\u00a1Nunca comparta informaci\u00f3n sensible\!
 ##general.days={0} days
+##general.description=Description
+##general.disconnected=Disconnected
 general.downloads=Descargas
 general.estimatedsize=Tama\u00f1o estimado
 general.file=Archivo
@@ -533,17 +560,19 @@ preferences.dialog.dyndns.link=http\://www.dyndns.org/services/dns/dyndns
 ##preferences.dialog.dyndnsmanager.nomatch.title=The entered DynDns does not match to this host. 
 ##preferences.dialog.errorExpandButton=>>
 ##preferences.dialog.errorShrinkButton=<<
+##preferences.dialog.findPort=Find port
+##preferences.dialog.findPort.tooltip=<html>Forces PowerFolder to search for a free port,<br>even if one or more ports in the port list are blocked.</html>
 ##preferences.dialog.general.title=General
+##preferences.dialog.iplanlist=LAN IP List
 preferences.dialog.language=Idioma
 ##preferences.dialog.lanlinesettings=LAN Connection speed
 ##preferences.dialog.linesettings=Internet Connection speed
 ##preferences.dialog.network.title=Network
 ##preferences.dialog.networkmode.lanonly=LAN only
 ##preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
-##preferences.dialog.networkmode.private=Private Networking   
-##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Disables public folder sharing. Restricts connectivity to interesting users only.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to some other users so finding of your friends in the network is possible.</BODY></HTML>
-##preferences.dialog.networkmode.public=Public Networking
-##preferences.dialog.networkmode.public.tooltip=<HTML><BODY>Enables public Folder sharing.<BR>Private folders will always require an Invitation, regardless of the networking mode.</BODY></HTML>
+##preferences.dialog.networkmode.name=Connect to
+##preferences.dialog.networkmode.private=LAN and Internet
+##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the internet.</BODY></HTML>
 preferences.dialog.nickname=Apodo
 preferences.dialog.nonwindowsinfo=Atenci\u00f3n\: Algunas opciones solo est\u00e1n disponibles en sistemas Windows
 ##preferences.dialog.plugin.classname=Java classname
@@ -552,7 +581,9 @@ preferences.dialog.nonwindowsinfo=Atenci\u00f3n\: Algunas opciones solo est\u00e
 ##preferences.dialog.plugin.status=Status
 ##preferences.dialog.plugin.status_disabled=Disabled
 ##preferences.dialog.plugin.status_enabled=Enabled
-##preferences.dialog.plugin.title=Plugin
+##preferences.dialog.plugin.title=Pro Settings
+##preferences.dialog.randomPort=Automatically find a port
+##preferences.dialog.randomPort.tooltip=PowerFolder will try to bind random port. 
 preferences.dialog.restarttext=Algunos cambios necesitan reiniciar PowerFolder.\n\u00bfQuiere reiniciar ahora?\n 
 preferences.dialog.restarttitle=Solicitar reinicio
 ##preferences.dialog.showadvanced=Show Advanced Preferences
@@ -578,6 +609,24 @@ preferences.name=Preferencias
 previewfiles.description=Previsualizar los archivos de esta carpeta
 previewfiles.key=P
 previewfiles.name=Previsualizar
+
+##pro.security.autoacceptfriendkeys=Automatically accept first time public keys from friends
+##pro.security.high=High
+##pro.security.high_info=High security (default)\:
+##pro.security.inet_encryption_preferred=Internet\: Encrypted connections are not required.
+##pro.security.inet_encryption_required=Internet\: Only encrypted connections are accepted.
+##pro.security.keymismatch=The public key of {0} mismatches the internal keystore.\nDo you want to accept his new key now?
+##pro.security.lan_encryption_preferred=LAN\:      Encrypted connections are not required.
+##pro.security.lan_encryption_required=LAN\:      Only encrypted connections are accepted.
+##pro.security.low=Low
+##pro.security.low_info=Low security\:
+##pro.security.maximum=Maximum
+##pro.security.maximum_info=Maximum security\:
+##pro.security.newkey=New Key detected
+##pro.security.nokeyfound=No public key for {0} found in internal keystore.\nDo you want to accept his new key now?
+##pro.security.possiblebreach=Possible security breach
+##pro.security.secure=secure
+##pro.security.securitysettings=Security Settings
 
 publicfolders.filter.show_empty_folders=Mostrar carpetas vac\u00edas
 publicfolders.lastModified=Ultima modificaci\u00f3n\t
@@ -610,6 +659,10 @@ publicfolders.size=Tama\u00f1o
 ##quickinfo.root.title=Welcome to PowerFolder\!
 ##quickinfo.upload.active={0} active upload(s)
 ##quickinfo.upload.title=Upload Status
+##quickinfo.user.isconnectedinet=Is on the Internet
+##quickinfo.user.isconnectedlan=Is on LAN
+##quickinfo.user.isdiconnected=Is disconnected
+##quickinfo.user.secureconnected=securely connected
 
 reconnect.description=Reconectarse a este usuario ahora
 reconnect.key=r
@@ -704,7 +757,10 @@ startdownloads.key=s
 startdownloads.name=Abrir
 
 ##status.download=Down\: %.2f KB/s
+##status.port=Port\: {0}
 ##status.upload=Up\: %.2f KB/s
+
+##statusbar.synchronizing=Synchronizing...
 
 ##synchronisation.notice.title=Activated synchronisation profile {0}
 synchronisation.warning.automatic_deletions=\u00a1Este modo tambi\u00e9n sincroniza el borrado de archivos\!\n\u00bfContinuar?
@@ -759,9 +815,8 @@ transfers.to=Para
 
 ##wizard.basicsetup.enternick=Please enter your nickname
 ##wizard.basicsetup.lanonly=LAN only
-##wizard.basicsetup.networking=Networking Mode
-##wizard.basicsetup.private=Private/Closed Group
-##wizard.basicsetup.public=Public Networking
+##wizard.basicsetup.networking=Connect to
+##wizard.basicsetup.private=LAN and Internet
 ##wizard.basicsetup.title=Basic Setup
 wizard.choosedisklocation.select=Seleccione el directorio
 wizard.choosedisklocation.title=Ubicaci\u00f3n en el disco
@@ -797,11 +852,15 @@ wizard.projectsync.setupsync=Configurar un proyecto sincronizado
 wizard.projectsync.successjoin=\u00a1Se ha unido con \u00e9xito al proyecto\!
 wizard.projectsync.takepartsync=Tome parte en una sincronizaci\u00f3n
 wizard.projectsync.title=Proyecto sincronizado
-wizard.sendinvitations.create=Para crear uno ahora, seleccione el nombre abajo
 wizard.sendinvitations.joinsync=Los archivos invitaci\u00f3n son necesarios para unirse a una sincronizaci\u00f3n
 wizard.sendinvitations.neveruntrusted=Nunca entrege archivos invitaci\u00f3n a personas en los que no conf\u00eda
-wizard.sendinvitations.passwdasfile=Es similar a una contrase\u00f1a, pero se guarda como un archivo
-wizard.sendinvitations.savefile=Guardar archivo invitaci\u00f3n
+##wizard.sendinvitations.offline=Not connected
+##wizard.sendinvitations.overpf=Via PowerFolder now
+##wizard.sendinvitations.savetofile=Save as file
+##wizard.sendinvitations.sendbymail=Send by mail
+##wizard.sendinvitations.sendinvitation=Send invitation
+##wizard.sendinvitations.sendsuccess=Invitation sent
+##wizard.sendinvitations.sendsuccessinfo=You successfully sent the invitation.
 wizard.sendinvitations.title=Guardar invitaci\u00f3n
 wizard.setupdns.dyndnshomepage=P\u00e1gina web Dyndns
 wizard.setupdns.enterdns=Teclee su dns (din\u00e1mica)
