--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -37,6 +37,7 @@ about.dialog.documentation=Documentation
 about.dialog.general_information=Informations Globales
 about.dialog.homepage=Page d'accueil
 about.dialog.professional_folder_sharing_tool=Outil de partage de fichiers
+##about.dialog.send_bug_report=Send Bug Report
 about.dialog.support=Support
 about.dialog.team=Equipe
 about.dialog.testers=Testeurs
@@ -63,8 +64,10 @@ addmodifierfriend.description=Ajouter le modifieur du fichier dans la liste d'am
 addmodifierfriend.key=M
 addmodifierfriend.name=Ajouter le modifieur du fichier dans la liste d'ami(e)s
 
+##addressEditor.parseerror=<html>Please enter the IPs to be considered on LAN, valid inputs are\:<br>xxx.xxx.xxx.xxx or<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
+##addressEditor.title=IP-Range
+
 chatpanel.cannot_deliver=Le message ne peut pas \u00eatre d\u00e9livr\u00e9 car '{0}' n'est pas connect\u00e9
-chatpanel.chat_about=Discuter \u00e0 propos de
 chatpanel.chat_with=Discuter avec
 chatpanel.member_connected_at_time={0} connect\u00e9 \u00e0 {1}
 chatpanel.member_disconnected_at_time={0} d\u00e9connect\u00e9 \u00e0 {1}
@@ -106,11 +109,14 @@ dialog.addmembertofriendlist.explain=(En ajoutant une personne \u00e0 votre list
 dialog.addmembertofriendlist.question={0} a rejoints un ou plusieurs dossiers\:\n\n{1}\nVouslez-vous l'ajouter \u00e0 votre liste d'ami(e)s maintenant ?
 dialog.addmembertofriendlist.title=Ajouter {0} \u00e0 votre liste d'ami(e)s
 dialog.alreadyrunning.exitbutton=Quitter
+##dialog.alreadyrunning.startbutton=Start anyways
 dialog.alreadyrunning.title=D\u00e9j\u00e0 en cours d'ex\u00e9cution
 dialog.alreadyrunning.warning=PowerFolder fonctionne d\u00e9j\u00e0\n\nInfo\: Si vous red\u00e9marrez PowerFolder, \n arr\u00eatez tous les processus javaw/java avant de relancer le programme
+##dialog.binderror=Unable to bind port\!
 dialog.connect.connecting=Connexion en cours
 dialog.connect.connecting_to=Connexion \u00e0 {0}...
 dialog.connection_problem=Probl\u00e8me de connexion
+##dialog.fatalerror.title=Fatal Error
 dialog.synchronization.choose=Merci de choisir l'action de synchronisation ad\u00e9quate
 dialog.synchronization.receive_changes=R\u00e9ception modifi\u00e9e
 dialog.synchronization.send_and_receive_changes=Envoyer et recevoir les changements
@@ -130,10 +136,6 @@ dialog.updatecheck.noUpdateAvailable=Cette version est \u00e0 jour
 dialog.updatecheck.nothingNeverAsk=Ne rien faire et ne jamais me reposer la question
 dialog.updatecheck.text=Une nouvelle version de PowerFolder est disponible            \n\nVersion actuelle\: v{0}\nVersion disponible\: v{1} (plus r\u00e9cente)\n
 dialog.updatecheck.title=Nouvelle version disponible
-
-folderpanel.filestab.dropfile_duplicate_dialog.skipall=Outre-passer les reproductions existantes
-folderpanel.filestab.dropfile_duplicate_dialog.text=Ce dossier contient d\u00e9j\u00e0 un fichier '{0}' Voulez-vous \u00e9craser le fichier existant ?
-folderpanel.filestab.dropfile_duplicate_dialog.title=Fichier existant
 
 disablesilentmode.description=Mode silencieux activ\u00e9, les fichiers ajout\u00e9s/modifi\u00e9s ne seront pas trouv\u00e9s. Passer en mode Actif.
 disablesilentmode.key=M
@@ -195,6 +197,28 @@ filelist.recursive=Vue \u00e0 plat
 filelist.status.no_files_available_add_files_and_invite=Aucun fichier disponible... ajouter des fichiers dans votre dossier local et demander \u00e0 des ami(e)s de rejoindre ce dossier en envoyant une invitation
 filelist.status.no_files_available_add_files_in_folder=Aucun fichier disponible... ajouter des fichiers dans votre dossier local pour les partager
 filelist.status.no_files_available_yet_fetching_filelist=Aucun fichier actuellement disponible... chercher dans la liste des fichiers
+
+##filenameproblem.dialog.add_to_ignore=Add to ignore
+##filenameproblem.dialog.add_to_ignore.explained=Add this file to the list of files that are excluded from sharing
+##filenameproblem.dialog.automatic_rename=Automatic rename
+##filenameproblem.dialog.automatic_rename.explained=removes invalid charaters and or adds "-1", or similair fixes to create a valid (unique) filename
+##filenameproblem.dialog.description=Filename problem(s) detected, select for each file a solution
+##filenameproblem.dialog.do_nothing=Do nothing
+##filenameproblem.dialog.never_ask_this_again=Never ask this again
+##filenameproblem.dialog.solution=Solution
+##filenameproblem.dialog.title=Filename problem(s) detected
+##filenameproblem.duplicate=Duplicate filename found (with different case)
+##filenameproblem.duplicate.description=A filename with the same name is found but it has a different case\:\n{0}\nthis causes problems on windows computers
+##filenameproblem.ends_with_illegal_char=The filename ends with characters that are not recommended
+##filenameproblem.ends_with_illegal_char.description=The filename ends with characters that may cause problems on Windows computers.\nThe characters . and space ( ) are not allowed as last characters on those computers
+##filenameproblem.not_recommended_chars=The filename contains characters that are not recommended
+##filenameproblem.not_recommended_chars_linux.description=The filename contains characters that may cause problems on Unix/Linux computers.\nThe character / is not allowed on those computers
+##filenameproblem.not_recommended_chars_mac_osx.description=The filename contains characters that may cause problems on Mac OSX computers.\nThe characters / and \: are not allowed on those computers
+##filenameproblem.not_recommended_chars_windows.description=The filename contains characters that may cause problems on Windows computers.\nThe characters |\\?*<"\:>/  and "controll" characters (ASCII code 0 till 31)\nare not allowed on those computers
+##filenameproblem.reserved_filename=The filename is a reserved filename on Windows
+##filenameproblem.reserved_filename.description=The filename is a reserved filename on Windows,\nit is recommended not to use this names on windows\:\n CON, PRN, AUX, CLOCK$, NUL COM0, COM1, COM2, COM3,\nCOM4, COM5, COM6, COM7, COM8, COM9, LPT0, LPT1,\nLPT2, LPT3, LPT4, LPT5, LPT6, LPT7, LPT8, and LPT9
+##filenameproblem.to_long=The filename is to long
+##filenameproblem.to_long.description=The filename is longer than 255 characters,\nthis in know to cause problems on Windows, Mac OSX and Unix/Linux computers
 
 findfriends.description=D\u00e9marrer la recherche de nouveaux amis
 findfriends.key=R
@@ -259,7 +283,10 @@ folderleave.dialog.title=D\u00e9connexion du dossier {0} ?
 folderleave.key=F
 folderleave.name=Fermer le dossier
 
-folderpanel.settingstab.choose_sync_profile=Choisir un profil de synchronisation
+##folderpanel.chattab.title=Chat
+folderpanel.filestab.dropfile_duplicate_dialog.skipall=Outre-passer les reproductions existantes
+folderpanel.filestab.dropfile_duplicate_dialog.text=Ce dossier contient d\u00e9j\u00e0 un fichier '{0}' Voulez-vous \u00e9craser le fichier existant ?
+folderpanel.filestab.dropfile_duplicate_dialog.title=Fichier existant
 folderpanel.hometab.folder_type=Type de dossier
 folderpanel.hometab.local_folder_location=Emplacement du dossier local
 folderpanel.hometab.local_size=Taille locale
@@ -279,6 +306,7 @@ folderpanel.settingstab.add_a_pattern.title=Ajouter un format d'exclusion
 folderpanel.settingstab.addbutton.description=Ajouter un format de fichier \u00e0 exclure de la synchronisation
 folderpanel.settingstab.addbutton.key=A
 folderpanel.settingstab.addbutton.name=Ajouter
+folderpanel.settingstab.choose_sync_profile=Choisir un profil de synchronisation
 folderpanel.settingstab.edit_a_pattern.text=Editer un format de fichier exclu de la synchronisation
 folderpanel.settingstab.edit_a_pattern.title=Editer un format de fichier exclu
 folderpanel.settingstab.editbutton.description=Editer un format de fichier
@@ -310,10 +338,9 @@ friendspanel.search_results=R\u00e9sultats de la recherche
 general.availability=Disponibilit\u00e9
 general.cancel=Annuler
 general.cancel.key=G     
-general.datawarning.0=Gardez en m\u00e9moire que
-general.datawarning.1=Tous les fichiers du dossier seront partag\u00e9s.
-general.datawarning.2=AVERTISSEMENT \: Ne jamais partager de fichiers sensibles \!
 general.days={0} jours
+##general.description=Description
+##general.disconnected=Disconnected
 general.downloads=T\u00e9l\u00e9chargements
 general.estimatedsize=Taille estim\u00e9e
 general.file=Fichier
@@ -533,13 +560,19 @@ preferences.dialog.dyndnsmanager.nomatch.text=L'entr\u00e9e DynDns ne correspond
 preferences.dialog.dyndnsmanager.nomatch.title=Entr\u00e9e DynDns diff\u00e9rente du h\u00f4te. 
 preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
+##preferences.dialog.findPort=Find port
+##preferences.dialog.findPort.tooltip=<html>Forces PowerFolder to search for a free port,<br>even if one or more ports in the port list are blocked.</html>
 preferences.dialog.general.title=Param\u00e9trage global
+##preferences.dialog.iplanlist=LAN IP List
 preferences.dialog.language=Langue
 preferences.dialog.lanlinesettings=Vitesse de connexion du LAN
 preferences.dialog.linesettings=Vitesse de connexion \u00e0 Internet
 preferences.dialog.network.title=R\u00e9seau
 preferences.dialog.networkmode.lanonly=LAN
 preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connecte uniquement les clients PowerFolder du r\u00e9seau local (LAN).<BR>La seule connexion sortante sera pour v\u00e9rifier une mise \u00e0 jour sur le site web de PowerFolder.<BR>Votre coupe-feu d\u00e9tectera une connexion sortante au 224.0.0.1 (adresse IP) ou ALL-SYSTEMS.MCAST.NET (nom DNS)<BR>Ceci est utilis\u00e9 pour d\u00e9tecter les autres clients PowerFolder de votre r\u00e9seau local (LAN).</BODY></HTML>
+##preferences.dialog.networkmode.name=Connect to
+##preferences.dialog.networkmode.private=LAN and Internet
+##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the internet.</BODY></HTML>
 preferences.dialog.nickname=Pseudo
 preferences.dialog.nonwindowsinfo=Attention\: Certain param\u00e8tres ne sont disponible qu'avec Windows
 preferences.dialog.plugin.classname=Nom de la classe Java
@@ -549,6 +582,8 @@ preferences.dialog.plugin.status=Etat
 preferences.dialog.plugin.status_disabled=D\u00e9sactiv\u00e9e
 preferences.dialog.plugin.status_enabled=Activ\u00e9e
 preferences.dialog.plugin.title=Plug-in
+##preferences.dialog.randomPort=Automatically find a port
+##preferences.dialog.randomPort.tooltip=PowerFolder will try to bind random port. 
 preferences.dialog.restarttext=Des changements n\u00e9cessitent un red\u00e9marrage de PowerFolder.\nVoulez-vous red\u00e9marrer maintenant ?\n 
 preferences.dialog.restarttitle=Red\u00e9marrer la demande
 preferences.dialog.showadvanced=Pr\u00e9f\u00e9rences avanc\u00e9es
@@ -574,6 +609,24 @@ preferences.name=Pr\u00e9f\u00e9rences
 previewfiles.description=Pr\u00e9visualiser les fichiers de ce dossier
 previewfiles.key=V
 previewfiles.name=Pr\u00e9-visualisation
+
+##pro.security.autoacceptfriendkeys=Automatically accept first time public keys from friends
+##pro.security.high=High
+##pro.security.high_info=High security (default)\:
+##pro.security.inet_encryption_preferred=Internet\: Encrypted connections are not required.
+##pro.security.inet_encryption_required=Internet\: Only encrypted connections are accepted.
+##pro.security.keymismatch=The public key of {0} mismatches the internal keystore.\nDo you want to accept his new key now?
+##pro.security.lan_encryption_preferred=LAN\:      Encrypted connections are not required.
+##pro.security.lan_encryption_required=LAN\:      Only encrypted connections are accepted.
+##pro.security.low=Low
+##pro.security.low_info=Low security\:
+##pro.security.maximum=Maximum
+##pro.security.maximum_info=Maximum security\:
+##pro.security.newkey=New Key detected
+##pro.security.nokeyfound=No public key for {0} found in internal keystore.\nDo you want to accept his new key now?
+##pro.security.possiblebreach=Possible security breach
+##pro.security.secure=secure
+##pro.security.securitysettings=Security Settings
 
 publicfolders.filter.show_empty_folders=Afficher les dossiers vides
 publicfolders.lastModified=Dernier modifi\u00e9\t
@@ -606,6 +659,10 @@ quickinfo.root.syncing=Synchronisation en cours...
 quickinfo.root.title=Bienvenue \u00e0 PowerFolder\!
 quickinfo.upload.active={0} \u00e9mission(s) en cours
 quickinfo.upload.title=Etat des \u00e9missions
+##quickinfo.user.isconnectedinet=Is on the Internet
+##quickinfo.user.isconnectedlan=Is on LAN
+##quickinfo.user.isdiconnected=Is disconnected
+##quickinfo.user.secureconnected=securely connected
 
 reconnect.description=Se reconnecter \u00e0 cette utilisateur maintenant
 reconnect.key=R
@@ -700,7 +757,10 @@ startdownloads.key=O
 startdownloads.name=Ouvrir
 
 status.download=Down\: %.2f KB/s
+##status.port=Port\: {0}
 status.upload=Up\: %.2f KB/s
+
+##statusbar.synchronizing=Synchronizing...
 
 synchronisation.notice.title=Activation du profil de synchronisation {0}
 synchronisation.warning.automatic_deletions=Ce mode synchronise les fichiers effac\u00e9s\!\nContinuer ?
@@ -724,9 +784,11 @@ systray.powerfolder=PowerFolder v{0}
 systray.show=Afficher
 systray.syncall=Dossiers synchronis\u00e9s
 systray.tooltip.down=DOWN {0} KBs
+##systray.tooltip.down.mb=Down {0} MBs
 systray.tooltip.insync=InSync
 systray.tooltip.syncing=Syncing
 systray.tooltip.up=UP {0} KBs
+##systray.tooltip.up.mb=Up {0} MBs
 
 title.friends=Liste d'ami(e)s
 title.my.folders=Mes dossiers partag\u00e9s 
@@ -751,16 +813,10 @@ unignorefile.description=Fichier(s) \u00e0 t\u00e9l\u00e9charger/partager \u00e0
 unignorefile.key=R
 unignorefile.name=Retirer de 'Ignor\u00e9s'
 
-webservice_request_folder_join.description=Demander au support PowerFolder de rejoindre ce dossier
-webservice_request_folder_join.key=W
-webservice_request_folder_join.name=Appeler le WebStore
-
-webservice_request_folder_leave.description=Demander au support PowerFolder de quitter ce dossier
-webservice_request_folder_leave.key=Q
-webservice_request_folder_leave.name=Quitter le WebStore
-
 wizard.basicsetup.enternick=Merci de saisir votre login Windows
 wizard.basicsetup.lanonly=R\u00e9seau local LAN
+##wizard.basicsetup.networking=Connect to
+##wizard.basicsetup.private=LAN and Internet
 wizard.basicsetup.title=Configuration standard
 wizard.choosedisklocation.select=S\u00e9lectionner le r\u00e9pertoire
 wizard.choosedisklocation.title=Emplacement sur le disque
@@ -796,11 +852,15 @@ wizard.projectsync.setupsync=Configurer une synchronisation de type Projet
 wizard.projectsync.successjoin=Vous venez de rejoindre le Projet\!
 wizard.projectsync.takepartsync=Prendre part \u00e0 une synchronisation de type Projet
 wizard.projectsync.title=Synchronisation de type Projet
-wizard.sendinvitations.create=\nPour g\u00e9n\u00e9rer le fichier d'invitation, indiquer le dossier cible ci-dessous
 wizard.sendinvitations.joinsync=Un fichier d'invitation est n\u00e9cessaire pour une synchronisation PowerFolder
 wizard.sendinvitations.neveruntrusted=\nNe le diffusez jamais aupr\u00e8s d'inconnu(e)s
-wizard.sendinvitations.passwdasfile=L'invitation est enregistr\u00e9e dans un fichier d'extension .invitation
-wizard.sendinvitations.savefile=Enregistrer le fichier d'invitation
+##wizard.sendinvitations.offline=Not connected
+##wizard.sendinvitations.overpf=Via PowerFolder now
+##wizard.sendinvitations.savetofile=Save as file
+##wizard.sendinvitations.sendbymail=Send by mail
+##wizard.sendinvitations.sendinvitation=Send invitation
+##wizard.sendinvitations.sendsuccess=Invitation sent
+##wizard.sendinvitations.sendsuccessinfo=You successfully sent the invitation.
 wizard.sendinvitations.title=Enregistrer une invitation
 wizard.setupdns.dyndnshomepage=Page d'accueil Dyndns
 wizard.setupdns.enterdns=Indiquer votre adresse (dynamique) DNS ou cliquer sur 'Terminer'
