--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -37,6 +37,7 @@ about.dialog.documentation=Documentazione
 about.dialog.general_information=Informazioni generali
 about.dialog.homepage=Homepage
 about.dialog.professional_folder_sharing_tool=Tool professionale di condivisione \ndelle cartelle
+##about.dialog.send_bug_report=Send Bug Report
 about.dialog.support=Supporto
 about.dialog.team=Team
 about.dialog.testers=Testers
@@ -63,8 +64,10 @@ addmodifierfriend.description=Aggiunge chi ha modificato il file agli amici
 addmodifierfriend.key=f
 addmodifierfriend.name=Aggiungi chi ha modificato agli amici
 
+##addressEditor.parseerror=<html>Please enter the IPs to be considered on LAN, valid inputs are\:<br>xxx.xxx.xxx.xxx or<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
+##addressEditor.title=IP-Range
+
 chatpanel.cannot_deliver=il messaggio non pu\u00f2 essere consegnato perch\u00e8 '{0}' non \u00e8 connesso
-chatpanel.chat_about=Chat riguardo
 chatpanel.chat_with=Chat con
 chatpanel.member_connected_at_time={0} connesso a {1}
 chatpanel.member_disconnected_at_time={0} disconnesso da {1}
@@ -106,11 +109,14 @@ dialog.addmembertofriendlist.explain=(Per aggiungere qualcuno alla tua lista di 
 dialog.addmembertofriendlist.question={0} si \u00e8 collegato ad una o pi\u00f9 cartelle\:\n\n{1}\nvuoi aggiungerlo alla tua lista di amici ora?
 dialog.addmembertofriendlist.title=Aggiungi {0} alla lista degli amici
 dialog.alreadyrunning.exitbutton=Esci
+##dialog.alreadyrunning.startbutton=Start anyways
 dialog.alreadyrunning.title=Gi\u00e0 in esecuzione
 dialog.alreadyrunning.warning=PowerFolder \u00e8 gi\u00e0 in esecuzione\n\nConsiglio\: se riavvi PowerFolder, \nelimina tutti i processi javaw/java e prova ancora
+##dialog.binderror=Unable to bind port\!
 dialog.connect.connecting=In connessione
 dialog.connect.connecting_to=In connessione a {0}...
 dialog.connection_problem=Problemi di connessione
+##dialog.fatalerror.title=Fatal Error
 dialog.synchronization.choose=Scegli la tua azione di sincronizzazione
 dialog.synchronization.receive_changes=Ricevi le modifiche
 dialog.synchronization.send_and_receive_changes=Invia e ricevi i cambiamenti 
@@ -130,10 +136,6 @@ dialog.updatecheck.noUpdateAvailable=Questa versione \u00e8 aggiornata
 dialog.updatecheck.nothingNeverAsk=Non chiedere pi\u00f9 nulla
 dialog.updatecheck.text=Una nuova versione di PowerFolder \u00e8 disponibile            \n\nQuesta versione\: v{0}\nUltima versione\: v{1} (recente)\n
 dialog.updatecheck.title=Nuova versione disponibile
-
-folderpanel.filestab.dropfile_duplicate_dialog.skipall=Salta Tutti I Duplicati
-folderpanel.filestab.dropfile_duplicate_dialog.text=Questa cartella contiene gi\u00e0 un file '{0}' si desidera sovrascrivere il file esistente?
-folderpanel.filestab.dropfile_duplicate_dialog.title=Il file esiste
 
 disablesilentmode.description=Siletmode \u00e8 attualmente attivo, file modificati/aggiunti non saranno trovati. Premi per tornare in modalit\u00e0 completa.
 disablesilentmode.key=S
@@ -195,6 +197,28 @@ filelist.recursive=ricorsivo
 filelist.status.no_files_available_add_files_and_invite=Nessun file disponibile... aggiungi files nella tua cartella locale e chiedi ad altri di unirsi a questa cartella su Invito
 filelist.status.no_files_available_add_files_in_folder=Nessun file disponibile... Aggiungi file nella tua cartella locale per condividerli
 filelist.status.no_files_available_yet_fetching_filelist=Nessun file ancora disponibile... recupero la lista dei file
+
+##filenameproblem.dialog.add_to_ignore=Add to ignore
+##filenameproblem.dialog.add_to_ignore.explained=Add this file to the list of files that are excluded from sharing
+##filenameproblem.dialog.automatic_rename=Automatic rename
+##filenameproblem.dialog.automatic_rename.explained=removes invalid charaters and or adds "-1", or similair fixes to create a valid (unique) filename
+##filenameproblem.dialog.description=Filename problem(s) detected, select for each file a solution
+##filenameproblem.dialog.do_nothing=Do nothing
+##filenameproblem.dialog.never_ask_this_again=Never ask this again
+##filenameproblem.dialog.solution=Solution
+##filenameproblem.dialog.title=Filename problem(s) detected
+##filenameproblem.duplicate=Duplicate filename found (with different case)
+##filenameproblem.duplicate.description=A filename with the same name is found but it has a different case\:\n{0}\nthis causes problems on windows computers
+##filenameproblem.ends_with_illegal_char=The filename ends with characters that are not recommended
+##filenameproblem.ends_with_illegal_char.description=The filename ends with characters that may cause problems on Windows computers.\nThe characters . and space ( ) are not allowed as last characters on those computers
+##filenameproblem.not_recommended_chars=The filename contains characters that are not recommended
+##filenameproblem.not_recommended_chars_linux.description=The filename contains characters that may cause problems on Unix/Linux computers.\nThe character / is not allowed on those computers
+##filenameproblem.not_recommended_chars_mac_osx.description=The filename contains characters that may cause problems on Mac OSX computers.\nThe characters / and \: are not allowed on those computers
+##filenameproblem.not_recommended_chars_windows.description=The filename contains characters that may cause problems on Windows computers.\nThe characters |\\?*<"\:>/  and "controll" characters (ASCII code 0 till 31)\nare not allowed on those computers
+##filenameproblem.reserved_filename=The filename is a reserved filename on Windows
+##filenameproblem.reserved_filename.description=The filename is a reserved filename on Windows,\nit is recommended not to use this names on windows\:\n CON, PRN, AUX, CLOCK$, NUL COM0, COM1, COM2, COM3,\nCOM4, COM5, COM6, COM7, COM8, COM9, LPT0, LPT1,\nLPT2, LPT3, LPT4, LPT5, LPT6, LPT7, LPT8, and LPT9
+##filenameproblem.to_long=The filename is to long
+##filenameproblem.to_long.description=The filename is longer than 255 characters,\nthis in know to cause problems on Windows, Mac OSX and Unix/Linux computers
 
 findfriends.description=Inizia ricerca di nuovi amici
 findfriends.key=T
@@ -259,7 +283,10 @@ folderleave.dialog.title=Esci dalla cartella {0} ?
 folderleave.key=E
 folderleave.name=Esci dalla cartella
 
-folderpanel.settingstab.choose_sync_profile=Scegli il tuo profilo di sincronizzazione
+##folderpanel.chattab.title=Chat
+folderpanel.filestab.dropfile_duplicate_dialog.skipall=Salta Tutti I Duplicati
+folderpanel.filestab.dropfile_duplicate_dialog.text=Questa cartella contiene gi\u00e0 un file '{0}' si desidera sovrascrivere il file esistente?
+folderpanel.filestab.dropfile_duplicate_dialog.title=Il file esiste
 folderpanel.hometab.folder_type=Tipo cartella
 folderpanel.hometab.local_folder_location=percorso della cartella locale
 folderpanel.hometab.local_size=Dimensione locale
@@ -279,6 +306,7 @@ folderpanel.settingstab.add_a_pattern.title=Aggiungi pattern da ignorare
 folderpanel.settingstab.addbutton.description=Aggiungi un Pattern per escludere i files dalla sincronizzazione
 folderpanel.settingstab.addbutton.key=A
 folderpanel.settingstab.addbutton.name=Aggiungi
+folderpanel.settingstab.choose_sync_profile=Scegli il tuo profilo di sincronizzazione
 folderpanel.settingstab.edit_a_pattern.text=Modifica un Pattern per escludere i files dalla sincronizzazione
 folderpanel.settingstab.edit_a_pattern.title=Modifica i pattern da ignorare
 folderpanel.settingstab.editbutton.description=Modifica un pattern
@@ -310,10 +338,9 @@ friendspanel.search_results=Risultati della ricerca
 general.availability=Disponibilit\u00e0
 general.cancel=Cancella
 general.cancel.key=C     
-general.datawarning.0=Tieni a mente
-general.datawarning.1=Tutti i file nella cartella verranno condivisi.
-general.datawarning.2=Non condividere mai dati sensibili
 general.days={0} giorni
+##general.description=Description
+##general.disconnected=Disconnected
 general.downloads=Downloads
 general.estimatedsize=Dimensione stimata
 general.file=File
@@ -533,13 +560,19 @@ preferences.dialog.dyndnsmanager.nomatch.text=Il DynDns inserito non corrisponde
 preferences.dialog.dyndnsmanager.nomatch.title=Il DynDns inserito non corrisponde a questo host. 
 preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
+##preferences.dialog.findPort=Find port
+##preferences.dialog.findPort.tooltip=<html>Forces PowerFolder to search for a free port,<br>even if one or more ports in the port list are blocked.</html>
 preferences.dialog.general.title=Generale
+##preferences.dialog.iplanlist=LAN IP List
 preferences.dialog.language=Linguaggio
 preferences.dialog.lanlinesettings=Velocit\u00e0 di connessione LAN
 preferences.dialog.linesettings=Velocit\u00e0 di connessione Internet
 preferences.dialog.network.title=Rete
 preferences.dialog.networkmode.lanonly=solo LAN
 preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connetti solo a client PowerFolder nella LAN.<BR>L'unica connessione esterna sar\u00e0 al sito che controlla gli aggiornamenti.<BR>Il tuo firewall rilever\u00e0 una connessione in uscita a 224.0.0.1 o ALL-SYSTEMS.MCAST.NET<BR>Noi usiamo questa per trovare gli altri client PowerFolder nella tua LAN.</BODY></HTML>
+##preferences.dialog.networkmode.name=Connect to
+##preferences.dialog.networkmode.private=LAN and Internet
+##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the internet.</BODY></HTML>
 preferences.dialog.nickname=Nome utente
 preferences.dialog.nonwindowsinfo=Attenzione\: alcune impostazioni non sono disponibili su sistemi Windows
 preferences.dialog.plugin.classname=Java classname
@@ -549,6 +582,8 @@ preferences.dialog.plugin.status=Stato
 preferences.dialog.plugin.status_disabled=Disabilitato
 preferences.dialog.plugin.status_enabled=Abilitato
 preferences.dialog.plugin.title=Plugin
+##preferences.dialog.randomPort=Automatically find a port
+##preferences.dialog.randomPort.tooltip=PowerFolder will try to bind random port. 
 preferences.dialog.restarttext=Alcune modifiche richiedono un riavvio del programma.\nVuoi riavviare PowerFolder ?\n 
 preferences.dialog.restarttitle=Richiesto riavvio
 preferences.dialog.showadvanced=Mostra preferenze avanzate
@@ -574,6 +609,24 @@ preferences.name=Preferenze
 previewfiles.description=Anteprima dei file di questa cartella
 previewfiles.key=p
 previewfiles.name=Anteprima
+
+##pro.security.autoacceptfriendkeys=Automatically accept first time public keys from friends
+##pro.security.high=High
+##pro.security.high_info=High security (default)\:
+##pro.security.inet_encryption_preferred=Internet\: Encrypted connections are not required.
+##pro.security.inet_encryption_required=Internet\: Only encrypted connections are accepted.
+##pro.security.keymismatch=The public key of {0} mismatches the internal keystore.\nDo you want to accept his new key now?
+##pro.security.lan_encryption_preferred=LAN\:      Encrypted connections are not required.
+##pro.security.lan_encryption_required=LAN\:      Only encrypted connections are accepted.
+##pro.security.low=Low
+##pro.security.low_info=Low security\:
+##pro.security.maximum=Maximum
+##pro.security.maximum_info=Maximum security\:
+##pro.security.newkey=New Key detected
+##pro.security.nokeyfound=No public key for {0} found in internal keystore.\nDo you want to accept his new key now?
+##pro.security.possiblebreach=Possible security breach
+##pro.security.secure=secure
+##pro.security.securitysettings=Security Settings
 
 publicfolders.filter.show_empty_folders=Mostra le cartelle vuote
 publicfolders.lastModified=Ultima modifica\t
@@ -606,6 +659,10 @@ quickinfo.root.syncing=Sincronizzazione in corso...
 quickinfo.root.title=Benvenuto in PowerFolder\!
 quickinfo.upload.active={0} upload(s) attivo
 quickinfo.upload.title=Stato Upload 
+##quickinfo.user.isconnectedinet=Is on the Internet
+##quickinfo.user.isconnectedlan=Is on LAN
+##quickinfo.user.isdiconnected=Is disconnected
+##quickinfo.user.secureconnected=securely connected
 
 reconnect.description=Riconnettiti a questo utente ora
 reconnect.key=r
@@ -700,7 +757,10 @@ startdownloads.key=A
 startdownloads.name=Apri
 
 status.download=Down\: %.2f KB/s
+##status.port=Port\: {0}
 status.upload=Up\: %.2f KB/s
+
+##statusbar.synchronizing=Synchronizing...
 
 synchronisation.notice.title=Profilo si sincronizzazione {0} attivato
 synchronisation.warning.automatic_deletions=Questa modalit\u00e0 sincronizzer\u00e0 anche la cancellazione di file\!\nContinui ?
@@ -755,6 +815,8 @@ unignorefile.name=Rimuovi da Ignora
 
 wizard.basicsetup.enternick=Inserisci il tuo nickname
 wizard.basicsetup.lanonly=solo LAN
+##wizard.basicsetup.networking=Connect to
+##wizard.basicsetup.private=LAN and Internet
 wizard.basicsetup.title=Impostazioni di base
 wizard.choosedisklocation.select=Scegli la directory
 wizard.choosedisklocation.title=Percorso su disco
@@ -790,11 +852,15 @@ wizard.projectsync.setupsync=Imposta la sincronizzazione di un progetto
 wizard.projectsync.successjoin=Sei entrato nel progetto\!
 wizard.projectsync.takepartsync=Prendi parte ad una sincronizzazione
 wizard.projectsync.title=Sincronizzazione di un progetto
-wizard.sendinvitations.create=Per crearne uno ora, scegli il nome del file nella casella sottostante
 wizard.sendinvitations.joinsync=I file di invito sono richiesti per accedere ad una sincronizzazione
 wizard.sendinvitations.neveruntrusted=Non dare mai i tuoi file di invito a persone non fidate
-wizard.sendinvitations.passwdasfile=E' simile ad una password, ma \u00e8 memorizzata in un file
-wizard.sendinvitations.savefile=Salva il file con l'invito
+##wizard.sendinvitations.offline=Not connected
+##wizard.sendinvitations.overpf=Via PowerFolder now
+##wizard.sendinvitations.savetofile=Save as file
+##wizard.sendinvitations.sendbymail=Send by mail
+##wizard.sendinvitations.sendinvitation=Send invitation
+##wizard.sendinvitations.sendsuccess=Invitation sent
+##wizard.sendinvitations.sendsuccessinfo=You successfully sent the invitation.
 wizard.sendinvitations.title=Salva un invito
 wizard.setupdns.dyndnshomepage=Dyndns Homepage
 wizard.setupdns.enterdns=Inserisci il tuo dns (dinamico)
