--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -17,15 +17,6 @@
 # http://www.powerfolder.com
 #
 
-statusbar.synchronizing=Synchronisiere...
-quickinfo.user.isconnectedlan=ist im LAN
-quickinfo.user.isconnectedinet=ist im Internet
-quickinfo.user.isdiconnected=ist nicht verbunden
-quickinfo.user.secureconnected=Die Verbindung ist sicher
-
-wizard.sendinvitations.sendsuccess=Einladung versendet
-wizard.sendinvitations.sendsuccessinfo=Die Einladung wurde erfolgreich versendet.
-
 abortcopy.description=Bricht den Kopiervorgang ab
 abortcopy.key=A
 abortcopy.name=Abbrechen
@@ -46,6 +37,7 @@ about.dialog.documentation=Dokumentation
 about.dialog.general_information=Allgemeine Information
 about.dialog.homepage=Homepage
 about.dialog.professional_folder_sharing_tool=Professionelle Dateisychronisation
+##about.dialog.send_bug_report=Send Bug Report
 about.dialog.support=Support
 about.dialog.team=Team
 about.dialog.testers=Tester
@@ -72,8 +64,10 @@ addmodifierfriend.description=F\u00fcgt den Bearbeiter der Datei zur Freundeslis
 addmodifierfriend.key=f
 addmodifierfriend.name=Freund hinzuf\u00fcgen
 
+##addressEditor.parseerror=<html>Please enter the IPs to be considered on LAN, valid inputs are\:<br>xxx.xxx.xxx.xxx or<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
+##addressEditor.title=IP-Range
+
 chatpanel.cannot_deliver=Die Nachricht konnte nicht zugestellt werden, da '{0}' nicht verbunden ist\!
-chatpanel.chat_about=Chat \u00fcber
 chatpanel.chat_with=Chat mit
 chatpanel.member_connected_at_time={0} verbunden um {1}
 chatpanel.member_disconnected_at_time={0} getrennt um {1}
@@ -115,11 +109,14 @@ dialog.addmembertofriendlist.explain=Hinweis\: Freunde d\u00fcrfen die Inhalten 
 dialog.addmembertofriendlist.question={0} ist folgenden Foldern beigetreten\:\n\n{1}\nM\u00f6chten Sie {0} jetzt zur Freundeliste hinzuf\u00fcgen?
 dialog.addmembertofriendlist.title={0} zur Freundesliste
 dialog.alreadyrunning.exitbutton=Ende
+##dialog.alreadyrunning.startbutton=Start anyways
 dialog.alreadyrunning.title=L\u00e4uft bereits
 dialog.alreadyrunning.warning=PowerFolder l\u00e4uft bereits
+##dialog.binderror=Unable to bind port\!
 dialog.connect.connecting=Verbinde
 dialog.connect.connecting_to=Verbinde zu {0}...
 dialog.connection_problem=Verbindungsproblem
+##dialog.fatalerror.title=Fatal Error
 dialog.synchronization.choose=Bitte die Synchronisationoption ausw\u00e4hlen
 dialog.synchronization.receive_changes=\u00c4nderunge erhalten
 dialog.synchronization.send_and_receive_changes=\u00c4nderungen ver\u00f6ffentlichen und neue erhalten
@@ -139,10 +136,6 @@ dialog.updatecheck.noUpdateAvailable=Diese Version is aktuell
 dialog.updatecheck.nothingNeverAsk=Nicht mehr erinnern 
 dialog.updatecheck.text=Eine neue Version von PowerFolder is verf\u00fcgbar \n\nIhre version\: v{0}\nAktuellste version\: v{1} (neuer)\n
 dialog.updatecheck.title=Update verf\u00fcgbar
-
-folderpanel.filestab.dropfile_duplicate_dialog.skipall=Doppelte \u00fcberspringen
-folderpanel.filestab.dropfile_duplicate_dialog.text=Dieser Folder enh\u00e4lt '{0}' bereits. M\u00f6chten Sie diese Datei \u00fcberschreiben?
-folderpanel.filestab.dropfile_duplicate_dialog.title=Datei bereits vorhanden
 
 disablesilentmode.description=Ruhemodus derzeitig aktiv. Hinzugef\u00fcgte/ver\u00e4nderte Dateien werden nicht erkannt. Bitte anklicken, um wieder in den aktiven Modus zu wechseln.
 disablesilentmode.key=w
@@ -204,6 +197,28 @@ filelist.recursive=Flache Ansicht
 filelist.status.no_files_available_add_files_and_invite=Keine Dateien verf\u00fcgbar... F\u00fcgen Sie dem Folder Dateien hinzu und verteilen Sie Einladungen 
 filelist.status.no_files_available_add_files_in_folder=Keine Dateien verf\u00fcbar... F\u00fcgen Sie dem Folder Dateien hinzu
 filelist.status.no_files_available_yet_fetching_filelist=Dateiliste wird abgerufen...
+
+##filenameproblem.dialog.add_to_ignore=Add to ignore
+##filenameproblem.dialog.add_to_ignore.explained=Add this file to the list of files that are excluded from sharing
+##filenameproblem.dialog.automatic_rename=Automatic rename
+##filenameproblem.dialog.automatic_rename.explained=removes invalid charaters and or adds "-1", or similair fixes to create a valid (unique) filename
+##filenameproblem.dialog.description=Filename problem(s) detected, select for each file a solution
+##filenameproblem.dialog.do_nothing=Do nothing
+##filenameproblem.dialog.never_ask_this_again=Never ask this again
+##filenameproblem.dialog.solution=Solution
+##filenameproblem.dialog.title=Filename problem(s) detected
+##filenameproblem.duplicate=Duplicate filename found (with different case)
+##filenameproblem.duplicate.description=A filename with the same name is found but it has a different case\:\n{0}\nthis causes problems on windows computers
+##filenameproblem.ends_with_illegal_char=The filename ends with characters that are not recommended
+##filenameproblem.ends_with_illegal_char.description=The filename ends with characters that may cause problems on Windows computers.\nThe characters . and space ( ) are not allowed as last characters on those computers
+##filenameproblem.not_recommended_chars=The filename contains characters that are not recommended
+##filenameproblem.not_recommended_chars_linux.description=The filename contains characters that may cause problems on Unix/Linux computers.\nThe character / is not allowed on those computers
+##filenameproblem.not_recommended_chars_mac_osx.description=The filename contains characters that may cause problems on Mac OSX computers.\nThe characters / and \: are not allowed on those computers
+##filenameproblem.not_recommended_chars_windows.description=The filename contains characters that may cause problems on Windows computers.\nThe characters |\\?*<"\:>/  and "controll" characters (ASCII code 0 till 31)\nare not allowed on those computers
+##filenameproblem.reserved_filename=The filename is a reserved filename on Windows
+##filenameproblem.reserved_filename.description=The filename is a reserved filename on Windows,\nit is recommended not to use this names on windows\:\n CON, PRN, AUX, CLOCK$, NUL COM0, COM1, COM2, COM3,\nCOM4, COM5, COM6, COM7, COM8, COM9, LPT0, LPT1,\nLPT2, LPT3, LPT4, LPT5, LPT6, LPT7, LPT8, and LPT9
+##filenameproblem.to_long=The filename is to long
+##filenameproblem.to_long.description=The filename is longer than 255 characters,\nthis in know to cause problems on Windows, Mac OSX and Unix/Linux computers
 
 findfriends.description=Starte die Suche nach Freunden
 findfriends.key=F
@@ -268,7 +283,10 @@ folderleave.dialog.title=Folder {0} verlassen ?
 folderleave.key=V
 folderleave.name=Folder verlassen
 
-folderpanel.settingstab.choose_sync_profile=Bitte w\u00e4hlen Sie das Synchronisationsprofil
+##folderpanel.chattab.title=Chat
+folderpanel.filestab.dropfile_duplicate_dialog.skipall=Doppelte \u00fcberspringen
+folderpanel.filestab.dropfile_duplicate_dialog.text=Dieser Folder enh\u00e4lt '{0}' bereits. M\u00f6chten Sie diese Datei \u00fcberschreiben?
+folderpanel.filestab.dropfile_duplicate_dialog.title=Datei bereits vorhanden
 folderpanel.hometab.folder_type=Folder Typ
 folderpanel.hometab.local_folder_location=Lokales Verzeichnis
 folderpanel.hometab.local_size=Lokale Gr\u00f6sse
@@ -288,6 +306,7 @@ folderpanel.settingstab.add_a_pattern.title=Muster hinzuf\u00fcgen
 folderpanel.settingstab.addbutton.description=Neues Muster zum Ausschluss von Dateien hinzuf\u00fcgen
 folderpanel.settingstab.addbutton.key=H
 folderpanel.settingstab.addbutton.name=Hinzuf\u00fcgen
+folderpanel.settingstab.choose_sync_profile=Bitte w\u00e4hlen Sie das Synchronisationsprofil
 folderpanel.settingstab.edit_a_pattern.text=Bearbeiten Sie das Muster f\u00fcr den Ausschluss von Dateien
 folderpanel.settingstab.edit_a_pattern.title=Muster \u00e4ndern
 folderpanel.settingstab.editbutton.description=Muster \u00e4ndern
@@ -319,10 +338,9 @@ friendspanel.search_results=Suchergebnisse
 general.availability=Verf\u00fcgbarkeit
 general.cancel=Abbrechen
 general.cancel.key=A
-general.datawarning.0=
-general.datawarning.1=
-general.datawarning.2=
 general.days={0} Tage
+##general.description=Description
+general.disconnected=Nicht verbunden
 general.downloads=Downloads
 general.estimatedsize=gesch\u00e4tzte Gr\u00f6\u00dfe
 general.file=Datei
@@ -340,7 +358,6 @@ general.localcopyat=Lokaler Speicherort
 general.localcopyplace=W\u00e4hlen den lokalen Speicherort 
 general.localized_date_format=MMMM dd. yyyy
 general.localnet=LAN
-general.disconnected=Nicht verbunden
 general.member=Benutzer
 general.notavailable=nicht verf\u00fcgbar
 general.notfound=nicht gefunden
@@ -543,16 +560,19 @@ preferences.dialog.dyndnsUserName=Benutzername
 ##preferences.dialog.dyndnsmanager.nomatch.title=The entered DynDns does not match to this host. 
 ##preferences.dialog.errorExpandButton=>>
 ##preferences.dialog.errorShrinkButton=<<
+##preferences.dialog.findPort=Find port
+##preferences.dialog.findPort.tooltip=<html>Forces PowerFolder to search for a free port,<br>even if one or more ports in the port list are blocked.</html>
 preferences.dialog.general.title=Allgemein
+##preferences.dialog.iplanlist=LAN IP List
 preferences.dialog.language=Sprache
 preferences.dialog.lanlinesettings=LAN Geschwindingkeit
 preferences.dialog.linesettings=Inet Geschwindigkeit
 preferences.dialog.network.title=Netzwerk
 preferences.dialog.networkmode.lanonly=Nur LAN
 ##preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
+##preferences.dialog.networkmode.name=Connect to
 preferences.dialog.networkmode.private=LAN und Internet
-##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Disables public folder sharing. Restricts connectivity to interesting users only.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to some other users so finding of your friends in the network is possible.</BODY></HTML>
-##preferences.dialog.networkmode.public.tooltip=<HTML><BODY>Enables public Folder sharing.<BR>Private folders will always require an Invitation, regardless of the networking mode.</BODY></HTML>
+##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the internet.</BODY></HTML>
 preferences.dialog.nickname=Benutzername
 preferences.dialog.nonwindowsinfo=Hinweis\: Einige Einstellung sind nur Benutzern von Windows m\u00f6glich\!
 ##preferences.dialog.plugin.classname=Java classname
@@ -561,7 +581,9 @@ preferences.dialog.nonwindowsinfo=Hinweis\: Einige Einstellung sind nur Benutzer
 ##preferences.dialog.plugin.status=Status
 ##preferences.dialog.plugin.status_disabled=Disabled
 ##preferences.dialog.plugin.status_enabled=Enabled
-##preferences.dialog.plugin.title=Plugin
+##preferences.dialog.plugin.title=Pro Settings
+##preferences.dialog.randomPort=Automatically find a port
+##preferences.dialog.randomPort.tooltip=PowerFolder will try to bind random port. 
 preferences.dialog.restarttext=Einige \u00c4nderungen ben\u00f6tigen einen Neustart von PowerFolder.\nWollen Sie jetzt neu starten ?\n 
 preferences.dialog.restarttitle=Neustart angefordert
 preferences.dialog.showadvanced=Zeige erweiterte Einstellungen
@@ -587,6 +609,24 @@ preferences.name=Einstellungen
 previewfiles.description=Dateivorschau f\u00fcr diesen Folder
 previewfiles.key=V
 previewfiles.name=Vorschau
+
+##pro.security.autoacceptfriendkeys=Automatically accept first time public keys from friends
+##pro.security.high=High
+##pro.security.high_info=High security (default)\:
+##pro.security.inet_encryption_preferred=Internet\: Encrypted connections are not required.
+##pro.security.inet_encryption_required=Internet\: Only encrypted connections are accepted.
+##pro.security.keymismatch=The public key of {0} mismatches the internal keystore.\nDo you want to accept his new key now?
+##pro.security.lan_encryption_preferred=LAN\:      Encrypted connections are not required.
+##pro.security.lan_encryption_required=LAN\:      Only encrypted connections are accepted.
+##pro.security.low=Low
+##pro.security.low_info=Low security\:
+##pro.security.maximum=Maximum
+##pro.security.maximum_info=Maximum security\:
+##pro.security.newkey=New Key detected
+##pro.security.nokeyfound=No public key for {0} found in internal keystore.\nDo you want to accept his new key now?
+##pro.security.possiblebreach=Possible security breach
+##pro.security.secure=secure
+##pro.security.securitysettings=Security Settings
 
 publicfolders.filter.show_empty_folders=Zeige leere Folder
 publicfolders.lastModified=Zuletz ge\u00e4ndert
@@ -619,6 +659,10 @@ quickinfo.root.syncing=Synchronisation aktiv...
 quickinfo.root.title=Willkommen bei PowerFolder\!
 quickinfo.upload.active={0} aktive Upload(s)
 quickinfo.upload.title=Upload \u00dcbersicht
+quickinfo.user.isconnectedinet=ist im Internet
+quickinfo.user.isconnectedlan=ist im LAN
+quickinfo.user.isdiconnected=ist nicht verbunden
+quickinfo.user.secureconnected=Die Verbindung ist sicher
 
 reconnect.description=Baut eine neue Verbindung zu dem Benutzer auf
 reconnect.key=r
@@ -713,7 +757,10 @@ startdownloads.key=s
 startdownloads.name=\u00d6ffnen
 
 ##status.download=Down\: %.2f KB/s
+##status.port=Port\: {0}
 ##status.upload=Up\: %.2f KB/s
+
+statusbar.synchronizing=Synchronisiere...
 
 ##synchronisation.notice.title=Activated synchronisation profile {0}
 ##synchronisation.warning.automatic_deletions=This mode will also synchronize file deletions\!\nContinue ?
@@ -803,15 +850,17 @@ wizard.projectsync.selectdirectory=Bitte geben Sie den Ort Ihrer Projektdaten an
 wizard.projectsync.selectlocaldirectory=Bitte geben Sie das Ziel f\u00fcr Ihre Projektdaten an.
 wizard.projectsync.setupsync=Ein neues Projekt synchronisieren
 wizard.projectsync.successjoin=Sie sind dem Projekt erfolgreich beigetreten\!
-wizard.sendinvitations.savetofile=Als Datei speichern
-wizard.sendinvitations.sendbymail=Per Mail versenden
-wizard.sendinvitations.offline=Nicht verbunden
-wizard.sendinvitations.overpf=Über PowerFolder versenden
 wizard.projectsync.takepartsync=An einer Projektsynchronisation teilnehmen
 wizard.projectsync.title=Projekt Synchronisation
 wizard.sendinvitations.joinsync=<html>Eine Einladung wird ben\u00f6tigt um an einer Sychronisation<br>teilzunehmen.</html>
 wizard.sendinvitations.neveruntrusted=<html>Geben Sie Einladungen nur an vertrauensw\u00fcrdige<br>Personen.</html>
+wizard.sendinvitations.offline=Nicht verbunden
+wizard.sendinvitations.overpf=\u00dcber PowerFolder versenden
+wizard.sendinvitations.savetofile=Als Datei speichern
+wizard.sendinvitations.sendbymail=Per Mail versenden
 wizard.sendinvitations.sendinvitation=Einladung versenden
+wizard.sendinvitations.sendsuccess=Einladung versendet
+wizard.sendinvitations.sendsuccessinfo=Die Einladung wurde erfolgreich versendet.
 wizard.sendinvitations.title=Einladung speichern
 wizard.setupdns.dyndnshomepage=Dyndns Homepage
 wizard.setupdns.enterdns=Bitte geben Sie Ihre (dynamische) Internetadresse an
