--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -37,6 +37,7 @@ about.dialog.documentation=\u4f7f\u7528\u8aac\u660e
 about.dialog.general_information=\u5168\u822c\u60c5\u5831
 about.dialog.homepage=\u30db\u30fc\u30e0\u30da\u30fc\u30b8
 about.dialog.professional_folder_sharing_tool=\u30d7\u30ed\u30d5\u30a7\u30c3\u30b7\u30e7\u30ca\u30eb \u30d5\u30a9\u30eb\u30c0\u5171\u6709\u30c4\u30fc\u30eb
+##about.dialog.send_bug_report=Send Bug Report
 about.dialog.support=\u30b5\u30dd\u30fc\u30c8
 about.dialog.team=\u30c1\u30fc\u30e0
 about.dialog.testers=\u52d5\u4f5c\u8a66\u9a13
@@ -63,8 +64,10 @@ addmodifierfriend.description=\u30d5\u30a1\u30a4\u30eb\u306e\u66f4\u65b0\u8005\u
 addmodifierfriend.key=F
 addmodifierfriend.name=\u66f4\u65b0\u8005\u3092\u53cb\u4eba\u30ea\u30b9\u30c8\u306b\u8ffd\u52a0(F)
 
+##addressEditor.parseerror=<html>Please enter the IPs to be considered on LAN, valid inputs are\:<br>xxx.xxx.xxx.xxx or<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
+##addressEditor.title=IP-Range
+
 chatpanel.cannot_deliver='{0}' \u3068\u63a5\u7d9a\u3055\u308c\u3066\u3044\u306a\u3044\u305f\u3081\u3001\u30e1\u30c3\u30bb\u30fc\u30b8\u9001\u9054\u4e0d\u53ef
-chatpanel.chat_about=\u30c1\u30e3\u30c3\u30c8\u5bfe\u8c61\: 
 chatpanel.chat_with=\u30c1\u30e3\u30c3\u30c8\u76f8\u624b\: 
 chatpanel.member_connected_at_time={1} {0} \u63a5\u7d9a
 chatpanel.member_disconnected_at_time={1} {0} \u5207\u65ad
@@ -106,11 +109,14 @@ dialog.addmembertofriendlist.explain=\uff08\u30e6\u30fc\u30b6\u30fc\u3092\u53cb\
 dialog.addmembertofriendlist.question={0} \u304c\u4e00\u3064\u306a\u3044\u3057\u306f\u305d\u308c\u4ee5\u4e0a\u306e\u30d5\u30a9\u30eb\u30c0\u306b\u53c2\u52a0\u3057\u307e\u3057\u305f\:\n\n{1}\n\u30e6\u30fc\u30b6\u30fc\u3092\u76f4\u3061\u306b\u53cb\u4eba\u30ea\u30b9\u30c8\u306b\u8ffd\u52a0\u3057\u307e\u3059\u304b\uff1f
 dialog.addmembertofriendlist.title=\u53cb\u4eba\u30ea\u30b9\u30c8\u306b {0} \u3092\u8ffd\u52a0
 dialog.alreadyrunning.exitbutton=\u7d42\u4e86
+##dialog.alreadyrunning.startbutton=Start anyways
 dialog.alreadyrunning.title=\u3059\u3067\u306b\u7a3c\u50cd\u4e2d
 dialog.alreadyrunning.warning=PowerFolder \u306f\u3059\u3067\u306b\u7a3c\u52d5\u3057\u3066\u3044\u307e\u3059\u3002\n\n\u30d2\u30f3\u30c8\:  PowerFolder \u306e\u518d\u8d77\u52d5\u3092\u884c\u3063\u3066\u3044\u305f\u5834\u5408\u306f\u3001\njavaw/java \u30d7\u30ed\u30bb\u30b9\u3092\u3059\u3079\u3066\u505c\u6b62\u3057\u3066\u304b\u3089\u3001\u3082\u3046\u4e00\u5ea6\u8a66\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+##dialog.binderror=Unable to bind port\!
 dialog.connect.connecting=\u63a5\u7d9a\u8a66\u884c\u4e2d
 dialog.connect.connecting_to={0} \u306b\u63a5\u7d9a\u3092\u8a66\u307f\u3066\u3044\u307e\u3059...
 dialog.connection_problem=\u63a5\u7d9a\u306b\u554f\u984c
+##dialog.fatalerror.title=Fatal Error
 dialog.synchronization.choose=\u540c\u671f\u52d5\u4f5c\u306e\u9078\u629e \u30d7\u30ed\u30b8\u30a7\u30af\u30c8\uff1a
 dialog.synchronization.receive_changes=\u66f4\u65b0\u5909\u66f4\u306e\u53d7\u4fe1
 dialog.synchronization.send_and_receive_changes=\u66f4\u65b0\u5909\u66f4\u306e\u9001\u4fe1\u304a\u3088\u3073\u53d7\u4fe1
@@ -130,10 +136,6 @@ dialog.updatecheck.noUpdateAvailable=\u3053\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\
 dialog.updatecheck.nothingNeverAsk=\u4eca\u56de\u306f\u4f55\u3082\u305b\u305a\u518d\u8cea\u554f\u3082\u6b62\u3081\u308b
 dialog.updatecheck.text=PowerFolder \u306e\u66f4\u65b0\u7248\u304c\u5165\u624b\u53ef\u80fd\u3067\u3059\u3002 \n\n\u672c\u7248\: v{0}\n\u66f4\u65b0\u7248\: v{1}\uff08\u6700\u65b0\uff09\n
 dialog.updatecheck.title=\u66f4\u65b0\u7248\u5165\u624b\u53ef\u80fd
-
-folderpanel.filestab.dropfile_duplicate_dialog.skipall=\u91cd\u8907\u30d5\u30a1\u30a4\u30eb\u306f\u3059\u3079\u3066\u30b9\u30ad\u30c3\u30d7
-folderpanel.filestab.dropfile_duplicate_dialog.text=\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u306b\u306f\u30d5\u30a1\u30a4\u30eb '{0}' \u304c\u3059\u3067\u306b\u5b58\u5728\u3057\u307e\u3059\u3002\u65e2\u5b58\u30d5\u30a1\u30a4\u30eb\u3092\u4e0a\u66f8\u304d\u3057\u307e\u3059\u304b\uff1f
-folderpanel.filestab.dropfile_duplicate_dialog.title=\u540c\u4e00\u30d5\u30a1\u30a4\u30eb\u304c\u5b58\u5728\u3057\u307e\u3059
 
 disablesilentmode.description=\u30b5\u30a4\u30ec\u30f3\u30c8\u30e2\u30fc\u30c9\u304c\u73fe\u5728\u6709\u52b9\u3001\u5909\u66f4\u3084\u8ffd\u52a0\u3055\u308c\u305f\u30d5\u30a1\u30a4\u30eb\u306e\u691c\u51fa\u306f\u4f11\u6b62\u3001\u3053\u306e\u30dc\u30bf\u30f3\u3092\u62bc\u3059\u3068\u30d5\u30eb\u30e2\u30fc\u30c9\u306b\u5fa9\u5e30
 disablesilentmode.key=W
@@ -195,6 +197,28 @@ filelist.recursive=\u975e\u968e\u5c64\u8868\u793a
 filelist.status.no_files_available_add_files_and_invite=\u53d6\u5f97\u53ef\u80fd\u30d5\u30a1\u30a4\u30eb\u306a\u3057... \u30ed\u30fc\u30ab\u30eb\u30d5\u30a9\u30eb\u30c0\u306b\u30d5\u30a1\u30a4\u30eb\u3092\u8ffd\u52a0\u3057\u3001\u62db\u5f85\u72b6\u306b\u3088\u3063\u3066\u4ed6\u306e\u4eba\u306b\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u3078\u306e\u53c2\u52a0\u3092\u4fc3\u3057\u3066\u304f\u3060\u3055\u3044
 filelist.status.no_files_available_add_files_in_folder=\u53d6\u5f97\u53ef\u80fd\u30d5\u30a1\u30a4\u30eb\u306a\u3057... \u30d5\u30a1\u30a4\u30eb\u3092\u5171\u6709\u3059\u308b\u306b\u306f\u30ed\u30fc\u30ab\u30eb\u30d5\u30a9\u30eb\u30c0\u306b\u30d5\u30a1\u30a4\u30eb\u3092\u8ffd\u52a0\u3057\u3066\u304f\u3060\u3055\u3044
 filelist.status.no_files_available_yet_fetching_filelist=\u53d6\u5f97\u53ef\u80fd\u30d5\u30a1\u30a4\u30eb\u4f9d\u7136\u306a\u3057... \u30d5\u30a1\u30a4\u30eb\u30ea\u30b9\u30c8\u3092\u53d6\u5f97\u3057\u3066\u3044\u307e\u3059
+
+##filenameproblem.dialog.add_to_ignore=Add to ignore
+##filenameproblem.dialog.add_to_ignore.explained=Add this file to the list of files that are excluded from sharing
+##filenameproblem.dialog.automatic_rename=Automatic rename
+##filenameproblem.dialog.automatic_rename.explained=removes invalid charaters and or adds "-1", or similair fixes to create a valid (unique) filename
+##filenameproblem.dialog.description=Filename problem(s) detected, select for each file a solution
+##filenameproblem.dialog.do_nothing=Do nothing
+##filenameproblem.dialog.never_ask_this_again=Never ask this again
+##filenameproblem.dialog.solution=Solution
+##filenameproblem.dialog.title=Filename problem(s) detected
+##filenameproblem.duplicate=Duplicate filename found (with different case)
+##filenameproblem.duplicate.description=A filename with the same name is found but it has a different case\:\n{0}\nthis causes problems on windows computers
+##filenameproblem.ends_with_illegal_char=The filename ends with characters that are not recommended
+##filenameproblem.ends_with_illegal_char.description=The filename ends with characters that may cause problems on Windows computers.\nThe characters . and space ( ) are not allowed as last characters on those computers
+##filenameproblem.not_recommended_chars=The filename contains characters that are not recommended
+##filenameproblem.not_recommended_chars_linux.description=The filename contains characters that may cause problems on Unix/Linux computers.\nThe character / is not allowed on those computers
+##filenameproblem.not_recommended_chars_mac_osx.description=The filename contains characters that may cause problems on Mac OSX computers.\nThe characters / and \: are not allowed on those computers
+##filenameproblem.not_recommended_chars_windows.description=The filename contains characters that may cause problems on Windows computers.\nThe characters |\\?*<"\:>/  and "controll" characters (ASCII code 0 till 31)\nare not allowed on those computers
+##filenameproblem.reserved_filename=The filename is a reserved filename on Windows
+##filenameproblem.reserved_filename.description=The filename is a reserved filename on Windows,\nit is recommended not to use this names on windows\:\n CON, PRN, AUX, CLOCK$, NUL COM0, COM1, COM2, COM3,\nCOM4, COM5, COM6, COM7, COM8, COM9, LPT0, LPT1,\nLPT2, LPT3, LPT4, LPT5, LPT6, LPT7, LPT8, and LPT9
+##filenameproblem.to_long=The filename is to long
+##filenameproblem.to_long.description=The filename is longer than 255 characters,\nthis in know to cause problems on Windows, Mac OSX and Unix/Linux computers
 
 findfriends.description=\u65b0\u898f\u306b\u53cb\u4eba\u306e\u691c\u7d22\u3092\u958b\u59cb
 findfriends.key=F
@@ -259,7 +283,10 @@ folderleave.dialog.title={0} \u30d5\u30a9\u30eb\u30c0\u9000\u907f\uff1f
 folderleave.key=L
 folderleave.name=\u30d5\u30a9\u30eb\u30c0\u9000\u907f(L)
 
-folderpanel.settingstab.choose_sync_profile=\u540c\u671f\u65b9\u5f0f\u306e\u9078\u629e
+##folderpanel.chattab.title=Chat
+folderpanel.filestab.dropfile_duplicate_dialog.skipall=\u91cd\u8907\u30d5\u30a1\u30a4\u30eb\u306f\u3059\u3079\u3066\u30b9\u30ad\u30c3\u30d7
+folderpanel.filestab.dropfile_duplicate_dialog.text=\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u306b\u306f\u30d5\u30a1\u30a4\u30eb '{0}' \u304c\u3059\u3067\u306b\u5b58\u5728\u3057\u307e\u3059\u3002\u65e2\u5b58\u30d5\u30a1\u30a4\u30eb\u3092\u4e0a\u66f8\u304d\u3057\u307e\u3059\u304b\uff1f
+folderpanel.filestab.dropfile_duplicate_dialog.title=\u540c\u4e00\u30d5\u30a1\u30a4\u30eb\u304c\u5b58\u5728\u3057\u307e\u3059
 folderpanel.hometab.folder_type=\u30d5\u30a9\u30eb\u30c0\u306e\u5c5e\u6027
 folderpanel.hometab.local_folder_location=\u30ed\u30fc\u30ab\u30eb\u30d5\u30a9\u30eb\u30c0\u306e\u5834\u6240
 folderpanel.hometab.local_size=\u30ed\u30fc\u30ab\u30eb\u30b5\u30a4\u30ba
@@ -279,6 +306,7 @@ folderpanel.settingstab.add_a_pattern.title=\u7121\u8996\u5bfe\u8c61\u30d1\u30bf
 folderpanel.settingstab.addbutton.description=\u540c\u671f\u5bfe\u8c61\u304b\u3089\u30d5\u30a1\u30a4\u30eb\u3092\u9664\u5916\u3059\u308b\u305f\u3081\u306e\u30d1\u30bf\u30fc\u30f3\u3092\u8ffd\u52a0
 folderpanel.settingstab.addbutton.key=A
 folderpanel.settingstab.addbutton.name=\u8ffd\u52a0(A)
+folderpanel.settingstab.choose_sync_profile=\u540c\u671f\u65b9\u5f0f\u306e\u9078\u629e
 folderpanel.settingstab.edit_a_pattern.text=\u540c\u671f\u5bfe\u8c61\u304b\u3089\u30d5\u30a1\u30a4\u30eb\u3092\u9664\u5916\u3059\u308b\u305f\u3081\u306e\u30d1\u30bf\u30fc\u30f3\u3092\u7de8\u96c6
 folderpanel.settingstab.edit_a_pattern.title=\u7121\u8996\u5bfe\u8c61\u30d1\u30bf\u30fc\u30f3\u306e\u7de8\u96c6
 folderpanel.settingstab.editbutton.description=\u30d1\u30bf\u30fc\u30f3\u306e\u7de8\u96c6
@@ -310,10 +338,9 @@ friendspanel.search_results=\u691c\u7d22\u7d50\u679c
 general.availability=\u53d6\u5f97\u53ef\u80fd\u5148
 general.cancel=\u53d6\u6d88\u3057
 general.cancel.key=C
-general.datawarning.0=\u6ce8\u610f\uff1a
-general.datawarning.1=\u30d5\u30a9\u30eb\u30c0\u5185\u306e\u3059\u3079\u3066\u306e\u30d5\u30a1\u30a4\u30eb\u304c\u5171\u6709\u3055\u308c\u307e\u3059\u3002
-general.datawarning.2=\u614e\u91cd\u306a\u53d6\u308a\u6271\u3044\u3092\u8981\u3059\u308b\u30c7\u30fc\u30bf\u306f\u5171\u6709\u3057\u306a\u3044\u3067\u304f\u3060\u3055\u3044\uff01
 general.days={0} \u65e5
+##general.description=Description
+##general.disconnected=Disconnected
 general.downloads=\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9 
 general.estimatedsize=\u6982\u7b97\u30b5\u30a4\u30ba
 general.file=\u30d5\u30a1\u30a4\u30eb
@@ -533,13 +560,19 @@ preferences.dialog.dyndnsmanager.nomatch.text=\u5165\u529b\u3055\u308c\u305f Dyn
 preferences.dialog.dyndnsmanager.nomatch.title=\u5165\u529b\u3055\u308c\u305f DynDns \u304c\u3053\u306e\u30db\u30b9\u30c8\u3068\u4e0d\u4e00\u81f4
 preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
+##preferences.dialog.findPort=Find port
+##preferences.dialog.findPort.tooltip=<html>Forces PowerFolder to search for a free port,<br>even if one or more ports in the port list are blocked.</html>
 preferences.dialog.general.title=\u5168 \u822c
+##preferences.dialog.iplanlist=LAN IP List
 preferences.dialog.language=\u8a00\u8a9e
 preferences.dialog.lanlinesettings=LAN \u63a5\u7d9a\u56de\u7dda\u901f\u5ea6
 preferences.dialog.linesettings=\u30a4\u30f3\u30bf\u30fc\u30cd\u30c3\u30c8\u63a5\u7d9a\u56de\u7dda\u901f\u5ea6
 preferences.dialog.network.title=\u30cd\u30c3\u30c8\u30ef\u30fc\u30af
 preferences.dialog.networkmode.lanonly=LAN \u5185\u306b\u9650\u5b9a
 preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>\u63a5\u7d9a\u3092\u30ed\u30fc\u30ab\u30eb\u30a8\u30ea\u30a2\u30cd\u30c3\u30c8\u30ef\u30fc\u30af\u5185\u306e PowerFolder \u30af\u30e9\u30a4\u30a2\u30f3\u30c8\u306b\u9650\u5b9a\u3057\u307e\u3059\u3002<BR>LAN \u5916\u3078\u306e\u63a5\u7d9a\u306f\u66f4\u65b0\u30c1\u30a7\u30c3\u30af\u30b5\u30a4\u30c8\u306e\u307f\u306b\u306a\u308a\u307e\u3059\u3002<BR>\u4f7f\u7528\u4e2d\u306e\u30d5\u30a1\u30a4\u30a2\u30fc\u30a6\u30a9\u30fc\u30eb\u304c 224.0.0.1 \u306a\u3044\u3057 ALL-SYSTEMS.MCAST.NET \u3078\u306e\u901a\u4fe1\u3092\u691c\u77e5\u3059\u308b\u304b\u3082\u3057\u308c\u307e\u305b\u3093\u304c\u3001<BR>\u305d\u308c\u3089\u306f LAN \u5185\u306e\u4ed6\u306e PowerFolder \u30af\u30e9\u30a4\u30a2\u30f3\u30c8\u3092\u691c\u51fa\u3059\u308b\u305f\u3081\u306b\u4f7f\u7528\u3055\u308c\u308b\u3082\u306e\u3067\u3059\u3002</BODY></HTML>
+##preferences.dialog.networkmode.name=Connect to
+##preferences.dialog.networkmode.private=LAN and Internet
+##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the internet.</BODY></HTML>
 preferences.dialog.nickname=\u30cb\u30c3\u30af\u30cd\u30fc\u30e0
 preferences.dialog.nonwindowsinfo=\u6ce8\u610f\: Windows \u30b7\u30b9\u30c6\u30e0\u3067\u306e\u307f\u4f7f\u7528\u53ef\u80fd\u306a\u8a2d\u5b9a\u9805\u76ee\u304c\u3044\u304f\u3064\u304b\u3042\u308a\u307e\u3059\u3002
 preferences.dialog.plugin.classname=Java \u30af\u30e9\u30b9\u540d
@@ -549,6 +582,8 @@ preferences.dialog.plugin.status=\u72b6\u614b
 preferences.dialog.plugin.status_disabled=\u7121\u52b9
 preferences.dialog.plugin.status_enabled=\u6709\u52b9
 preferences.dialog.plugin.title=\u30d7\u30e9\u30b0\u30a4\u30f3
+##preferences.dialog.randomPort=Automatically find a port
+##preferences.dialog.randomPort.tooltip=PowerFolder will try to bind random port. 
 preferences.dialog.restarttext=\u3044\u304f\u3064\u304b\u306e\u8a2d\u5b9a\u9805\u76ee\u306f\u3001\u5909\u66f4\u306e\u9069\u7528\u306b PowerFolder \u306e\u518d\u8d77\u52d5\u304c\u5fc5\u8981\u3067\u3059\u3002\n\u76f4\u3061\u306b\u518d\u8d77\u52d5\u3057\u307e\u3059\u304b\uff1f\n
 preferences.dialog.restarttitle=\u518d\u8d77\u52d5\u8981\u6c42
 preferences.dialog.showadvanced=\u8a73\u7d30\u8a2d\u5b9a\u3092\u8868\u793a
@@ -574,6 +609,24 @@ preferences.name=\u8a2d\u5b9a(P)
 previewfiles.description=\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u5185\u306e\u30d5\u30a1\u30a4\u30eb\u3092\u8868\u793a
 previewfiles.key=P
 previewfiles.name=\u30d7\u30ec\u30d3\u30e5\u30fc(P)
+
+##pro.security.autoacceptfriendkeys=Automatically accept first time public keys from friends
+##pro.security.high=High
+##pro.security.high_info=High security (default)\:
+##pro.security.inet_encryption_preferred=Internet\: Encrypted connections are not required.
+##pro.security.inet_encryption_required=Internet\: Only encrypted connections are accepted.
+##pro.security.keymismatch=The public key of {0} mismatches the internal keystore.\nDo you want to accept his new key now?
+##pro.security.lan_encryption_preferred=LAN\:      Encrypted connections are not required.
+##pro.security.lan_encryption_required=LAN\:      Only encrypted connections are accepted.
+##pro.security.low=Low
+##pro.security.low_info=Low security\:
+##pro.security.maximum=Maximum
+##pro.security.maximum_info=Maximum security\:
+##pro.security.newkey=New Key detected
+##pro.security.nokeyfound=No public key for {0} found in internal keystore.\nDo you want to accept his new key now?
+##pro.security.possiblebreach=Possible security breach
+##pro.security.secure=secure
+##pro.security.securitysettings=Security Settings
 
 publicfolders.filter.show_empty_folders=\u7a7a\u30d5\u30a9\u30eb\u30c0\u306e\u8868\u793a
 publicfolders.lastModified=\u6700\u7d42\u5909\u66f4
@@ -606,6 +659,10 @@ quickinfo.root.syncing=\u540c\u671f\u9032\u884c\u4e2d...
 quickinfo.root.title=PowerFolder \u306b\u3088\u3046\u3053\u305d\uff01
 quickinfo.upload.active=\u51e6\u7406\u4e2d\u306e\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9 {0}
 quickinfo.upload.title=\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u306e\u72b6\u614b
+##quickinfo.user.isconnectedinet=Is on the Internet
+##quickinfo.user.isconnectedlan=Is on LAN
+##quickinfo.user.isdiconnected=Is disconnected
+##quickinfo.user.secureconnected=securely connected
 
 reconnect.description=\u3053\u306e\u30e6\u30fc\u30b6\u30fc\u3078\u306e\u518d\u63a5\u7d9a\u3092\u76f4\u3061\u306b\u8a66\u884c
 reconnect.key=R
@@ -700,7 +757,10 @@ startdownloads.key=S
 startdownloads.name=\u958b\u304f(S)
 
 ##status.download=Down\: %.2f KB/s
+##status.port=Port\: {0}
 ##status.upload=Up\: %.2f KB/s
+
+##statusbar.synchronizing=Synchronizing...
 
 synchronisation.notice.title={0} \u540c\u671f\u65b9\u5f0f\u306e\u6709\u52b9\u5316
 synchronisation.warning.automatic_deletions=\u3053\u306e\u30e2\u30fc\u30c9\u3067\u306f\u30d5\u30a1\u30a4\u30eb\u524a\u9664\u3082\u540c\u671f\u3055\u308c\u307e\u3059\uff01\n\u3088\u308d\u3057\u3044\u3067\u3059\u304b \uff1f
@@ -755,6 +815,8 @@ unignorefile.name=\u7121\u8996\u5bfe\u8c61\u304b\u3089\u5916\u3059(U)
 
 wizard.basicsetup.enternick=\u30cb\u30c3\u30af\u30cd\u30fc\u30e0\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
 wizard.basicsetup.lanonly=LAN \u5185\u9650\u5b9a
+##wizard.basicsetup.networking=Connect to
+##wizard.basicsetup.private=LAN and Internet
 wizard.basicsetup.title=\u57fa\u672c\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7
 wizard.choosedisklocation.select=\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u306e\u9078\u629e
 wizard.choosedisklocation.title=\u30c7\u30a3\u30b9\u30af\u5185\u306e\u5834\u6240
@@ -790,11 +852,15 @@ wizard.projectsync.setupsync=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u540c\u6
 wizard.projectsync.successjoin=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3078\u6b63\u5e38\u306b\u53c2\u52a0\u3067\u304d\u307e\u3057\u305f\uff01
 wizard.projectsync.takepartsync=\u65e2\u5b58\u306e\u540c\u671f\u306b\u53c2\u52a0\u3059\u308b
 wizard.projectsync.title=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u540c\u671f
-wizard.sendinvitations.create=\u76f4\u3061\u306b\u4f5c\u6210\u3059\u308b\u5834\u5408\u306f\u3001\u4ee5\u4e0b\u3067\u30d5\u30a1\u30a4\u30eb\u540d\u3092\u6307\u5b9a\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 wizard.sendinvitations.joinsync=\u4ed6\u30e6\u30fc\u30b6\u30fc\u304c\u540c\u671f\u306b\u53c2\u52a0\u3059\u308b\u306b\u306f\u62db\u5f85\u72b6\u30d5\u30a1\u30a4\u30eb\u304c\u5fc5\u8981\u3067\u3059\u3002
 wizard.sendinvitations.neveruntrusted=\u4fe1\u983c\u3067\u304d\u306a\u3044\u4eba\u306b\u306f\u6c7a\u3057\u3066\u62db\u5f85\u72b6\u3092\u6e21\u3055\u306a\u3044\u3067\u304f\u3060\u3055\u3044\u3002
-wizard.sendinvitations.passwdasfile=\u3053\u308c\u306f\u30d1\u30b9\u30ef\u30fc\u30c9\u306b\u985e\u4f3c\u3059\u308b\u3082\u306e\u3067\u3001\u30d5\u30a1\u30a4\u30eb\u3068\u3057\u3066\u4fdd\u5b58\u3055\u308c\u307e\u3059\u3002
-wizard.sendinvitations.savefile=\u62db\u5f85\u72b6\u30d5\u30a1\u30a4\u30eb\u306e\u4f5c\u6210\u4fdd\u5b58
+##wizard.sendinvitations.offline=Not connected
+##wizard.sendinvitations.overpf=Via PowerFolder now
+##wizard.sendinvitations.savetofile=Save as file
+##wizard.sendinvitations.sendbymail=Send by mail
+##wizard.sendinvitations.sendinvitation=Send invitation
+##wizard.sendinvitations.sendsuccess=Invitation sent
+##wizard.sendinvitations.sendsuccessinfo=You successfully sent the invitation.
 wizard.sendinvitations.title=\u62db\u5f85\u72b6\u306e\u4fdd\u5b58
 wizard.setupdns.dyndnshomepage=DynDns \u30db\u30fc\u30e0\u30da\u30fc\u30b8
 wizard.setupdns.enterdns=\u3042\u306a\u305f\u306e\uff08\u52d5\u7684\uff09DNS \u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
