--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -37,6 +37,7 @@ about.dialog.documentation=Documentatie
 about.dialog.general_information=Algemene Informatie
 about.dialog.homepage=Homepage
 about.dialog.professional_folder_sharing_tool=Professioneel folder deel programma
+##about.dialog.send_bug_report=Send Bug Report
 about.dialog.support=Ondersteuning
 about.dialog.team=Team
 about.dialog.testers=Testers
@@ -63,8 +64,10 @@ addmodifierfriend.description=Voeg bewerker van bestand toe aan vriendenlijst
 addmodifierfriend.key=f
 addmodifierfriend.name=Maak bewerker vriend
 
+##addressEditor.parseerror=<html>Please enter the IPs to be considered on LAN, valid inputs are\:<br>xxx.xxx.xxx.xxx or<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
+##addressEditor.title=IP-Range
+
 chatpanel.cannot_deliver=Bericht kan niet verzonden worden omdat '{0}' niet verbonden is
-chatpanel.chat_about=Chat over
 chatpanel.chat_with=Chat met
 chatpanel.member_connected_at_time={0} verbonden om {1}
 chatpanel.member_disconnected_at_time={0} verbrak de verbinding om {1}
@@ -106,11 +109,14 @@ dialog.addmembertofriendlist.explain=(Door iemand aan uw vriendenlijst toe te vo
 dialog.addmembertofriendlist.question={0} werd lid van een of meer folder(s)\:\n\n{1}\nwilt u hem aan uw vriendenlijst toevoegen?
 dialog.addmembertofriendlist.title=Voeg {0} toe aan vriendenlijst
 dialog.alreadyrunning.exitbutton=Afsluiten
+##dialog.alreadyrunning.startbutton=Start anyways
 dialog.alreadyrunning.title=al gestart
 dialog.alreadyrunning.warning=PowerFolder is al gestart\n\nHint\: Als u PowerFolder opnieuw heeft gestart, \nVerwijder alle javaw/java processen en probeer opnieuw
+##dialog.binderror=Unable to bind port\!
 dialog.connect.connecting=Verbinden
 dialog.connect.connecting_to=Verbinden met {0}...
 dialog.connection_problem=Verbindingsprobleem
+##dialog.fatalerror.title=Fatal Error
 dialog.synchronization.choose=Kies uw sync actie op
 dialog.synchronization.receive_changes=Ontvang veranderingen
 dialog.synchronization.send_and_receive_changes=Verzend en ontvang veranderingen
@@ -130,10 +136,6 @@ dialog.updatecheck.noUpdateAvailable=Deze versie is recent
 dialog.updatecheck.nothingNeverAsk=Niets en vraag niet opnieuw
 dialog.updatecheck.text=Een nieuwe versie van PowerFolder is beschikbaar            \n\nDeze versie\: v{0}\nLaatste versie beschikbaar\: v{1} (nieuwer)\n
 dialog.updatecheck.title=Nieuwe versie beschikbaar
-
-folderpanel.filestab.dropfile_duplicate_dialog.skipall=Sla alle dubbelen over
-folderpanel.filestab.dropfile_duplicate_dialog.text=Deze map bevat al een bestand genaamd '{0}' wilt u dit bestaande bestand overschrijven?
-folderpanel.filestab.dropfile_duplicate_dialog.title=Bestand bestaat
 
 disablesilentmode.description=Passieve mode is gekozen, toegevoegde/gewijzigde bestanden worden niet automatisch gevonden. Klik voor actieve mode.
 disablesilentmode.key=w
@@ -195,6 +197,28 @@ filelist.recursive=platte lijst
 filelist.status.no_files_available_add_files_and_invite=Geen bestanden beschikbaar... Voeg bestanden toe aan uw lokale map vraag anderen om lid te worden van deze folder met behulp van een Invitatie
 filelist.status.no_files_available_add_files_in_folder=Geen bestanden beschikbaar... Voeg bestanden toe aan uw lokale map om ze te delen of te synchronizeren
 filelist.status.no_files_available_yet_fetching_filelist=Nog geen bestanden beschikbaar... bezig bestanden lijsten op te halen
+
+##filenameproblem.dialog.add_to_ignore=Add to ignore
+##filenameproblem.dialog.add_to_ignore.explained=Add this file to the list of files that are excluded from sharing
+##filenameproblem.dialog.automatic_rename=Automatic rename
+##filenameproblem.dialog.automatic_rename.explained=removes invalid charaters and or adds "-1", or similair fixes to create a valid (unique) filename
+##filenameproblem.dialog.description=Filename problem(s) detected, select for each file a solution
+##filenameproblem.dialog.do_nothing=Do nothing
+##filenameproblem.dialog.never_ask_this_again=Never ask this again
+##filenameproblem.dialog.solution=Solution
+##filenameproblem.dialog.title=Filename problem(s) detected
+##filenameproblem.duplicate=Duplicate filename found (with different case)
+##filenameproblem.duplicate.description=A filename with the same name is found but it has a different case\:\n{0}\nthis causes problems on windows computers
+##filenameproblem.ends_with_illegal_char=The filename ends with characters that are not recommended
+##filenameproblem.ends_with_illegal_char.description=The filename ends with characters that may cause problems on Windows computers.\nThe characters . and space ( ) are not allowed as last characters on those computers
+##filenameproblem.not_recommended_chars=The filename contains characters that are not recommended
+##filenameproblem.not_recommended_chars_linux.description=The filename contains characters that may cause problems on Unix/Linux computers.\nThe character / is not allowed on those computers
+##filenameproblem.not_recommended_chars_mac_osx.description=The filename contains characters that may cause problems on Mac OSX computers.\nThe characters / and \: are not allowed on those computers
+##filenameproblem.not_recommended_chars_windows.description=The filename contains characters that may cause problems on Windows computers.\nThe characters |\\?*<"\:>/  and "controll" characters (ASCII code 0 till 31)\nare not allowed on those computers
+##filenameproblem.reserved_filename=The filename is a reserved filename on Windows
+##filenameproblem.reserved_filename.description=The filename is a reserved filename on Windows,\nit is recommended not to use this names on windows\:\n CON, PRN, AUX, CLOCK$, NUL COM0, COM1, COM2, COM3,\nCOM4, COM5, COM6, COM7, COM8, COM9, LPT0, LPT1,\nLPT2, LPT3, LPT4, LPT5, LPT6, LPT7, LPT8, and LPT9
+##filenameproblem.to_long=The filename is to long
+##filenameproblem.to_long.description=The filename is longer than 255 characters,\nthis in know to cause problems on Windows, Mac OSX and Unix/Linux computers
 
 findfriends.description=Start zoeken naar nieuwe vrienden
 findfriends.key=V
@@ -259,7 +283,10 @@ folderleave.dialog.title=Stop delen van Folder {0} ?
 folderleave.key=V
 folderleave.name=Verlaat folder
 
-folderpanel.settingstab.choose_sync_profile=Kies synchronizatie profiel
+##folderpanel.chattab.title=Chat
+folderpanel.filestab.dropfile_duplicate_dialog.skipall=Sla alle dubbelen over
+folderpanel.filestab.dropfile_duplicate_dialog.text=Deze map bevat al een bestand genaamd '{0}' wilt u dit bestaande bestand overschrijven?
+folderpanel.filestab.dropfile_duplicate_dialog.title=Bestand bestaat
 folderpanel.hometab.folder_type=Folder type
 folderpanel.hometab.local_folder_location=Lokale map lokatie
 folderpanel.hometab.local_size=Lokale omvang
@@ -279,6 +306,7 @@ folderpanel.settingstab.add_a_pattern.title=Voeg patroon toe
 folderpanel.settingstab.addbutton.description=Geef een patroon in om bestanden uit te zonderen van synchronizatie
 folderpanel.settingstab.addbutton.key=T
 folderpanel.settingstab.addbutton.name=Toevoegen
+folderpanel.settingstab.choose_sync_profile=Kies synchronizatie profiel
 folderpanel.settingstab.edit_a_pattern.text=Bewerk een patroon om bestanden uit te zonderen van synchronizatie
 folderpanel.settingstab.edit_a_pattern.title=Bewerk uitzonderings patroon
 folderpanel.settingstab.editbutton.description=Bewerk een patroon
@@ -310,10 +338,9 @@ friendspanel.search_results=Zoek resultaten
 general.availability=Beschikbaarheid
 general.cancel=Annuleren
 general.cancel.key=A 
-general.datawarning.0=Let op\!
-general.datawarning.1=Alle Bestanden in folder worden gedeeld.
-general.datawarning.2=Deel nooit gevoelige bestanden\!
 general.days={0} dagen
+##general.description=Description
+##general.disconnected=Disconnected
 general.downloads=Downloads
 general.estimatedsize=Geschatte omvang
 general.file=Bestand
@@ -533,13 +560,19 @@ preferences.dialog.dyndnsmanager.nomatch.text=De ingegeven DynDns klopt niet met
 preferences.dialog.dyndnsmanager.nomatch.title=De ingegeven DynDns klopt niet met deze host. 
 preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
+##preferences.dialog.findPort=Find port
+##preferences.dialog.findPort.tooltip=<html>Forces PowerFolder to search for a free port,<br>even if one or more ports in the port list are blocked.</html>
 preferences.dialog.general.title=Algemeen
+##preferences.dialog.iplanlist=LAN IP List
 preferences.dialog.language=Taal
 preferences.dialog.lanlinesettings=LAN verbindings snelheid
 preferences.dialog.linesettings=Internet verbindings snelheid
 preferences.dialog.network.title=Netwerk
 preferences.dialog.networkmode.lanonly=alleen LAN
 preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Verbind alleen met PowerFolder programma's in het Local Area Network.<BR>De enige verbinding 'uit' is naar de update check website.<BR>Uw firewall zal mogelijk een uitgaande verbinding detecteren naar 224.0.0.1 of ALL-SYSTEMS.MCAST.NET<BR>Dit gebruiken we om andere PowerFolder programma's in uw LAN te detecteren.</BODY></HTML>
+##preferences.dialog.networkmode.name=Connect to
+##preferences.dialog.networkmode.private=LAN and Internet
+##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the internet.</BODY></HTML>
 preferences.dialog.nickname=Naam
 preferences.dialog.nonwindowsinfo=Attentie, sommige instellingen zijn alleen beschikbaar op windows computers
 preferences.dialog.plugin.classname=Java classname
@@ -549,6 +582,8 @@ preferences.dialog.plugin.status=Status
 preferences.dialog.plugin.status_disabled=Actief
 preferences.dialog.plugin.status_enabled=InActief
 preferences.dialog.plugin.title=Plugin
+##preferences.dialog.randomPort=Automatically find a port
+##preferences.dialog.randomPort.tooltip=PowerFolder will try to bind random port. 
 preferences.dialog.restarttext=Door veranderingen in de instellingen is het noodzakelijk dat PowerFolder opnieuw opstart.\nWilt u PowerFolder nu opnieuw opstarten?\n 
 preferences.dialog.restarttitle=Opnieuw opstarten 
 preferences.dialog.showadvanced=Toon geavanceerde instellingen
@@ -574,6 +609,24 @@ preferences.name=Instellingen
 previewfiles.description=Preview bestanden in deze Folder
 previewfiles.key=P
 previewfiles.name=Preview
+
+##pro.security.autoacceptfriendkeys=Automatically accept first time public keys from friends
+##pro.security.high=High
+##pro.security.high_info=High security (default)\:
+##pro.security.inet_encryption_preferred=Internet\: Encrypted connections are not required.
+##pro.security.inet_encryption_required=Internet\: Only encrypted connections are accepted.
+##pro.security.keymismatch=The public key of {0} mismatches the internal keystore.\nDo you want to accept his new key now?
+##pro.security.lan_encryption_preferred=LAN\:      Encrypted connections are not required.
+##pro.security.lan_encryption_required=LAN\:      Only encrypted connections are accepted.
+##pro.security.low=Low
+##pro.security.low_info=Low security\:
+##pro.security.maximum=Maximum
+##pro.security.maximum_info=Maximum security\:
+##pro.security.newkey=New Key detected
+##pro.security.nokeyfound=No public key for {0} found in internal keystore.\nDo you want to accept his new key now?
+##pro.security.possiblebreach=Possible security breach
+##pro.security.secure=secure
+##pro.security.securitysettings=Security Settings
 
 publicfolders.filter.show_empty_folders=Toon lege folders
 publicfolders.lastModified=Veranderd op
@@ -606,6 +659,10 @@ quickinfo.root.syncing=Bezig met synchroniseren...
 quickinfo.root.title=Welkom by PowerFolder\!
 quickinfo.upload.active={0} actieve upload(s)
 quickinfo.upload.title=Upload Status
+##quickinfo.user.isconnectedinet=Is on the Internet
+##quickinfo.user.isconnectedlan=Is on LAN
+##quickinfo.user.isdiconnected=Is disconnected
+##quickinfo.user.secureconnected=securely connected
 
 reconnect.description=Reconnects to this user now
 reconnect.key=r
@@ -700,7 +757,10 @@ startdownloads.key=O
 startdownloads.name=Open
 
 ##status.download=Down\: %.2f KB/s
+##status.port=Port\: {0}
 ##status.upload=Up\: %.2f KB/s
+
+##statusbar.synchronizing=Synchronizing...
 
 synchronisation.notice.title=Gekozen synchronisatieprofiel {0}
 synchronisation.warning.automatic_deletions=Deze mode zal automatisch bestandsverwijderingen synchroniseren\!\nDoorgaan ?
@@ -755,6 +815,8 @@ unignorefile.name=Verwijder uit uitzonderingslijst
 
 wizard.basicsetup.enternick=Voer gebruikersnaam in
 wizard.basicsetup.lanonly=Alleen LAN
+##wizard.basicsetup.networking=Connect to
+##wizard.basicsetup.private=LAN and Internet
 wizard.basicsetup.title=Basis Setup
 wizard.choosedisklocation.select=Selecteer map
 wizard.choosedisklocation.title=Disk lokatie
@@ -790,11 +852,15 @@ wizard.projectsync.setupsync=Setup een project synchronisatie
 wizard.projectsync.successjoin=U bent nu lid van het project 
 wizard.projectsync.takepartsync=Neem deel in een project synchronisatie
 wizard.projectsync.title=Project synchronisatie
-wizard.sendinvitations.create=Om nu een invitatie aan te maken vult hieronder een bestandsnaam in
 wizard.sendinvitations.joinsync=Invitatie bestanden zijn vereist om lid te worden van een synchronizatie 
 wizard.sendinvitations.neveruntrusted=Geef invitatie bestanden nooit aan personen die u niet vertrouwd
-wizard.sendinvitations.passwdasfile=Het is vergelijkbaar met een wachtwoord maar wordt opgeslagen als een bestand
-wizard.sendinvitations.savefile=Sla invitatie op
+##wizard.sendinvitations.offline=Not connected
+##wizard.sendinvitations.overpf=Via PowerFolder now
+##wizard.sendinvitations.savetofile=Save as file
+##wizard.sendinvitations.sendbymail=Send by mail
+##wizard.sendinvitations.sendinvitation=Send invitation
+##wizard.sendinvitations.sendsuccess=Invitation sent
+##wizard.sendinvitations.sendsuccessinfo=You successfully sent the invitation.
 wizard.sendinvitations.title=Sla een invitatie op 
 wizard.setupdns.dyndnshomepage=Dyndns Homepage
 wizard.setupdns.enterdns=Vult uw (dynamic) dns in
